Updated Language Help files to reflect Version Number change.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@7202 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/src/admin/help/cs/ldapsettings.html
+++ b/src/admin/help/cs/ldapsettings.html
@@ -53,7 +53,7 @@
 <!-- This is the start of the Help Content Layer --> <div id="helpcontent"> <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> <h3 class="head3b">Spr&aacute;va nastaven&iacute; služby LDAP pro syst&eacute;m iFolder.</h3>
-  <p> Tento n&aacute;stroj slouž&iacute; k &uacute;prav&aacute;m nastaven&iacute; služby LDAP pro vybran&yacute; server Novell<SUP><SMALL>&reg;</SMALL></SUP> iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 v t&eacute;to dom&eacute;ně iFolder. </p>
+  <p> Toto rozhran&iacute; slouž&iacute; k &uacute;prav&aacute;m nastaven&iacute; služby LDAP pro vybran&yacute; server Novell<SUP><SMALL>&reg;</SMALL></SUP> iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 nebo novějš&iacute; v t&eacute;to dom&eacute;ně iFolder. </p>
   
   <H3><A NAME="modify"></A>&Uacute;prava nastaven&iacute; služby LDAP</H3><P>Proveďte &uacute;pravy v libovoln&eacute;m z n&aacute;sleduj&iacute;c&iacute;ch pol&iacute; a klepnut&iacute;m na tlač&iacute;tko<i>OK</i> použijte změny:</P><TABLE WIDTH="93%" BORDER="1"><TR><TD CLASS="tablehead2"><P>Parametr</P></TD><TD CLASS="tablehead2"><P>Popis</P></TD></TR>
 <TR><TD VALIGN="TOP">
