--- a/src/admin/help/cs/systeminfo.html
+++ b/src/admin/help/cs/systeminfo.html
@@ -55,7 +55,7 @@ div.Section1
 <!-- This is the start of the Help Content Layer --> <div id="helpcontent"> <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> <h3 class="head3b">Spr&aacute;va syst&eacute;mu iFolder</h3>
-  <p> Použijte toto rozhran&iacute; pro spr&aacute;vu služeb Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 vybran&eacute;ho serveru.</p>
+  <p> Použijte toto rozhran&iacute; pro spr&aacute;vu služeb Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 nebo novějš&iacute;ch vybran&eacute;ho serveru.</p>
   <P>Tato n&aacute;pověda pojedn&aacute;v&aacute; o n&aacute;sleduj&iacute;c&iacute;ch t&eacute;matech:</P>
   <blockquote> <P><A HREF="#sytemsettings" TARGET="_self">Nastaven&iacute; syst&eacute;mu</A> <BR><A HREF="#status" TARGET="_self">Stav opakovan&eacute;ho poskytov&aacute;n&iacute;</a><BR><A HREF="#admin" TARGET="_self">Karta Spr&aacute;vci</a><BR> <A HREF="#policy" TARGET="_self">Z&aacute;sady </a><BR></P></BLOCKQUOTE>
   
@@ -118,8 +118,8 @@ div.Section1
         <span style="font-size:11.0pt;font-family:Arial;">Chcete-li umožnit spr&aacute;vcům explicitně spravovat diskovou kv&oacute;tu pro skupiny a členy skupiny, vyberte možnost <i>Konzola spr&aacute;vy</i>. Pokud vyberete tuto možnost, bude diskov&aacute; kv&oacute;ta přiřazen&aacute; uživatelům omezena, aby nepřes&aacute;hla agreg&aacute;tn&iacute; využit&iacute; disku skupiny. Možnost <i>Konzola spr&aacute;vy</i> je vybr&aacute;na ve v&yacute;choz&iacute;m nastaven&iacute;.</span></p>
         <p class="Normal2">
         <span style="font-size:11.0pt;font-family:Arial;">Chcete-li, aby agreg&aacute;tn&iacute; diskovou kv&oacute;tu skupin na straně serveru spravoval modul synchronizace, vyberte možnost <i>Modul synchronizace</i>. Modul synchronizace zajišťuje, že diskov&aacute; kv&oacute;ta pro všechny uživatele ve skupině nepřes&aacute;hne agreg&aacute;tn&iacute; diskovou kv&oacute;tu skupiny.</span></p>
-        <p class="Normal2">
-        &nbsp;</p>
+        <p class="Normal2">&nbsp;
+        </p>
         </TD></TR><TR><TD VALIGN="TOP">
         <span style="font-size: 11.0pt; font-family: Arial; ">Oddělen&eacute; skupiny</span></TD><TD>
         <span style="font-size: 11.0pt; font-family: Arial; "> Umožňuje rozdělit skupiny na nez&aacute;visl&eacute; entity a zajistit, aby uživatel&eacute; jedn&eacute; skupiny nebyli dostupn&iacute; pro uživatele jin&eacute; skupiny za &uacute;čelem sd&iacute;len&iacute; složek iFolder. Chcete-li umožnit sd&iacute;len&iacute; složek iFolder pouze mezi členy stejn&eacute; skupiny, zaškrtněte pol&iacute;čko <i>Vytvořit oddělen&eacute; skupiny</i>.</span><p>
@@ -298,7 +298,7 @@ div.Section1
 <TR>
       <TD VALIGN="TOP"> 
         <h4><span style="FONT-SIZE: 9.5pt; FONT-FAMILY: Arial"> Z&aacute;sada počtu složek iFolder na uživatele</span></h4>
-        <h4> &nbsp;</h4>
+        <h4>&nbsp; </h4>
       </TD>
       <TD> 
         <p class="Normal2">
