--- a/src/admin/help/cs/users.html
+++ b/src/admin/help/cs/users.html
@@ -54,7 +54,7 @@
             with a line beneath it.
        --> 
   <h3 class="head3b">Spr&aacute;va uživatelsk&eacute;ho &uacute;čtu</h3>
-  <p> Použijte toto rozhran&iacute; pro spr&aacute;vu uživatelů složky iFolder vybran&eacute; dom&eacute;ny iFolder. Vyhled&aacute;vac&iacute; n&aacute;stroj v&aacute;m pomůže nal&eacute;zt uživatelsk&yacute; &uacute;čet aplikace Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7, kter&yacute; chcete spravovat. </p>
+  <p> Použijte toto rozhran&iacute; pro spr&aacute;vu uživatelů složky iFolder vybran&eacute; dom&eacute;ny iFolder. Vyhled&aacute;vac&iacute; n&aacute;stroj v&aacute;m pomůže nal&eacute;zt uživatelsk&yacute; &uacute;čet aplikace Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 nebo novějš&iacute;, kter&yacute; chcete spravovat. </p>
 	
   <P><B><FONT SIZE="-1">POZN&Aacute;MKA:</FONT></B> <FONT SIZE="-1">V&yacute;raz <i>uživatel&eacute; služby iFolder </i> znamen&aacute; jednotliv&eacute; uživatele i skupiny LDAPGroup.</FONT></P>
 	<BLOCKQUOTE CLASS="blockquote"><P><BR>
