--- a/src/admin/help/cs/webacc.html
+++ b/src/admin/help/cs/webacc.html
@@ -57,7 +57,7 @@
        --> 
   <h3 class="head3b">Spouštěn&iacute; aplikace Web Admin</h3>
   
-  <p>Konzola Web Admin v&aacute;m umožn&iacute; spravovat servery, nastaven&iacute; z&aacute;sad, uživatele složek iFolder a složky iFolder v dan&eacute; dom&eacute;ně iFolder 3.7. Můžete zapnout uživatele protokolu LDAP pro dom&eacute;nu iFolder a spravovat servery iFolder začleněn&eacute; do dom&eacute;ny iFolder. Pomoc&iacute; konzoly Web Admin můžete rovněž u uživatelů uplatnit šifrov&aacute;n&iacute;. Konzola Web Admin bude m&iacute;t možnost vydat rozš&iacute;řen&eacute; zpr&aacute;vy, kter&eacute; obsahuj&iacute; celkov&yacute; stav serveru, zpr&aacute;vy &uacute;čtu iFolder a informace o uživatelsk&eacute;m &uacute;čtu. 
+  <p>Konzola Web Admin v&aacute;m umožn&iacute; spravovat servery, nastaven&iacute; z&aacute;sad, uživatele složek iFolder a složky iFolder v dan&eacute; dom&eacute;ně iFolder 3.7 nebo novějš&iacute;. Můžete zapnout uživatele protokolu LDAP pro dom&eacute;nu iFolder a spravovat servery iFolder začleněn&eacute; do dom&eacute;ny iFolder. Pomoc&iacute; konzoly Web Admin můžete rovněž u uživatelů uplatnit šifrov&aacute;n&iacute;. Konzola Web Admin bude m&iacute;t možnost vydat rozš&iacute;řen&eacute; zpr&aacute;vy, kter&eacute; obsahuj&iacute; celkov&yacute; stav serveru, zpr&aacute;vy &uacute;čtu iFolder a informace o uživatelsk&eacute;m &uacute;čtu. 
   </p>
 	
   
