--- a/src/admin/help/de/ldapsettings.html
+++ b/src/admin/help/de/ldapsettings.html
@@ -53,7 +53,7 @@
 <!-- This is the start of the Help Content Layer --> <div id="helpcontent"> <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> <h3 class="head3b">Verwalten der LDAP-Einstellungen f&uuml;r das iFolder-System</h3>
-  <p> Mit dieser Schnittstelle k&ouml;nnen Sie die LDAP-Einstellungen f&uuml;r den ausgew&auml;hlten Novell<SUP><SMALL>&reg;</SMALL></SUP> iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7-Server in dieser iFolder-Dom&auml;ne bearbeiten. </p>
+  <p> Mit dieser Schnittstelle k&ouml;nnen Sie die LDAP-Einstellungen f&uuml;r den ausgew&auml;hlten Novell<SUP><SMALL>&reg;</SMALL></SUP> iFolder<SUP><SMALL>&reg;</SMALL></SUP>-Server der Version 3.7 oder h&ouml;her in dieser iFolder-Dom&auml;ne bearbeiten. </p>
   
   <H3><A NAME="modify"></A>Bearbeiten der LDAP-Einstellungen</H3><P>Bearbeiten Sie die folgenden Felder und klicken Sie dann auf <i>OK</i>, um Ihre &Auml;nderungen zu &uuml;bernehmen:</P><TABLE WIDTH="93%" BORDER="1"><TR><TD CLASS="tablehead2"><P>Parameter</P></TD><TD CLASS="tablehead2"><P>Beschreibung</P></TD></TR>
 <TR><TD VALIGN="TOP">
