--- a/src/admin/help/de/login.html
+++ b/src/admin/help/de/login.html
@@ -1,4 +1,4 @@
-﻿<html>
+<html>
 
    <head>
      <meta http-equiv="content-type" content="text/html;charset=UTF-8">
@@ -58,7 +58,7 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
        --> 
   <h3 class="head3b">Anmelden bei Web Admin</h3>
   
-  <P>Um iFolder-Ordner und Benutzer verwalten zu k&ouml;nnen, m&uuml;ssen Sie sich bei Novell iFolder <SUP><SMALL>&reg;</SMALL></SUP> 3.7 Web Admin anmelden. Der iFolder-Adminbenutzername und das Passwort werden &uuml;ber die LDAP-Directory-Services authentifiziert. </P>
+  <P>Um iFolder-Ordner und Benutzer verwalten zu k&ouml;nnen, m&uuml;ssen Sie sich bei Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 Web Admin (oder h&ouml;her) anmelden. Der iFolder-Adminbenutzername und das Passwort werden &uuml;ber die LDAP-Directory-Services authentifiziert. </P>
   <P>Au&szlig;erdem k&ouml;nnen Sie eine der unterst&uuml;tzten Sprachen ausw&auml;hlen. Normalerweise sollte diese Sprache dem Sprachcode entsprechen, der f&uuml;r den iFolder-Enterprise-Server und f&uuml;r Ihren lokalen Computer verwendet wird.  Stellen Sie sicher, dass Sie die Spracheneinstellung in Ihrem Browser so konfigurieren, dass Ihre gew&uuml;nschte Sprache unterst&uuml;tzt wird. </P>
 <OL>
   <LI>
