--- a/src/admin/help/de/systeminfo.html
+++ b/src/admin/help/de/systeminfo.html
@@ -55,7 +55,7 @@ div.Section1
 <!-- This is the start of the Help Content Layer --> <div id="helpcontent"> <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> <h3 class="head3b">Verwalten des iFolder-Systems</h3>
-  <p> Verwenden Sie diese Schnittstelle zum Verwalten von Novell iFolder <SUP><SMALL>r</SMALL></SUP> 3.7-Services f&uuml;r den ausgew&auml;hlten Server.</p>
+  <p> Verwenden Sie diese Schnittstelle zum Verwalten von Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP>-Services der Version 3.7 oder h&ouml;her f&uuml;r den ausgew&auml;hlten Server.</p>
   <P>In diesem Hilfethema werden folgende Informationen behandelt:</P>
   <blockquote> <P><A HREF="#sytemsettings" TARGET="_self">Systemeinstellungen </A> <BR><A HREF="#status" TARGET="_self">Reprovision Status (Neubereitstellungsstatus)</a><BR><A HREF="#admin" TARGET="_self">Registerkarte &quot;Administrator&quot;</a><BR> <A HREF="#policy" TARGET="_self">Richtlinien</a><BR></P></BLOCKQUOTE>
   
@@ -118,8 +118,8 @@ div.Section1
         <span style="font-size:11.0pt;font-family:Arial;">W&auml;hlen Sie die Option <i>Verwaltungskonsole</i> aus, um es Administratoren zu erm&ouml;glichen, die Speicherplatzquoten f&uuml;r Gruppen und Gruppenmitglieder explizit zu verwalten. Wenn Sie diese Option ausw&auml;hlen, wird die den Benutzern zugewiesene Speicherplatzquote beschr&auml;nkt, sodass sie die gesamte Speicherplatzauslastung der Gruppe nicht &uuml;bersteigt. Die Option <i>Verwaltungskonsole</i> ist standardm&auml;&szlig;ig ausgew&auml;hlt.</span></p>
         <p class="Normal2">
         <span style="font-size:11.0pt;font-family:Arial;">W&auml;hlen Sie die Option <i>Synchronisierungs-Engine</i> aus, damit die Synchronisierungs-Engine die Gesamtspeicherplatzquote f&uuml;r Gruppen im Backend verwalten kann. Die Synchronisierungs-Engine stellt sicher, dass die Speicherplatzquote f&uuml;r alle Benutzer in der Gruppe die Gesamtspeicherplatzquote der Gruppe nicht &uuml;bersteigt.</span></p>
-        <p class="Normal2">
-        &nbsp;</p>
+        <p class="Normal2">&nbsp;
+        </p>
         </TD></TR><TR><TD VALIGN="TOP">
         <span style="font-size: 11.0pt; font-family: Arial; ">Aufgeteilte Gruppen</span></TD><TD>
         <span style="font-size: 11.0pt; font-family: Arial; "> Mit dieser Option k&ouml;nnen Sie Gruppen in unabh&auml;ngige Einheiten aufteilen und sicherstellen, dass die Mitglieder einer Gruppe nicht auf die Mitglieder einer anderen Gruppe zugreifen und iFolder-Ordner freigeben k&ouml;nnen. Aktivieren Sie das Kontrollk&auml;stchen f&uuml;r <i>Aufgeteilte Gruppen erstellen</i>, um die Freigabe von iFolder-Ordnern auf die Mitglieder derselben Gruppe zu beschr&auml;nken.</span><p>
@@ -298,7 +298,7 @@ div.Section1
 <TR>
       <TD VALIGN="TOP"> 
         <h4><span style="FONT-SIZE: 9.5pt; FONT-FAMILY: Arial"> Richtlinie &quot;iFolder-Ordner pro Benutzer&quot;</span></h4>
-        <h4> &nbsp;</h4>
+        <h4>&nbsp; </h4>
       </TD>
       <TD> 
         <p class="Normal2">
