--- a/src/admin/help/de/users.html
+++ b/src/admin/help/de/users.html
@@ -54,7 +54,7 @@
             with a line beneath it.
        --> 
   <h3 class="head3b">Verwalten eines Benutzerkontos</h3>
-  <p> Verwenden Sie diese Schnittstelle zum Verwalten von iFolder-Benutzern in der ausgew&auml;hlten Dom&auml;ne.  Das Suchwerkzeug unterst&uuml;tzt Sie beim Suchen des zu verwaltenden Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7-Benutzerkontos. </p>
+  <p> Verwenden Sie diese Schnittstelle zum Verwalten von iFolder-Benutzern in der ausgew&auml;hlten Dom&auml;ne.  Das Suchwerkzeug unterst&uuml;tzt Sie beim Suchen des zu verwaltenden Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP>-Benutzerkontos der Version 3.7 oder h&ouml;her. </p>
 	
   <P><B><FONT SIZE="-1">HINWEIS:</FONT></B> <FONT SIZE="-1">Der Begriff <i>iFolder-Benutzer</i> bezieht sich sowohl auf einzelne Benutzer als auch auf LDAP-Gruppen.</FONT></P>
 	<BLOCKQUOTE CLASS="blockquote"><P><BR>
