--- a/src/admin/help/de/webacc.html
+++ b/src/admin/help/de/webacc.html
@@ -57,7 +57,7 @@
        --> 
   <h3 class="head3b">Starten von Web Admin</h3>
   
-  <p>In der Web Admin-Konsole k&ouml;nnen Sie Server, Richtlinieneinstellungen, iFolder-Benutzer und iFolder-Ordner einer bestimmten iFolder 3.7-Dom&auml;ne verwalten. Sie k&ouml;nnen LDAP-Benutzer f&uuml;r die Verwendung einer iFolder-Dom&auml;ne aktivieren sowie die in der iFolder-Dom&auml;ne teilnehmenden iFolder-Server verwalten. Mit Web Admin k&ouml;nnen Sie auch die Verschl&uuml;sselung von Benutzerdaten erzwingen. Die Web Admin-Konsole bietet umfassende Berichte wie beispielsweise Berichte zum Serverstatus, zu iFolder-Konten oder zu Benutzerkontoinformationen. 
+  <p>In der Web Admin-Konsole k&ouml;nnen Sie Server, Richtlinieneinstellungen, iFolder-Benutzer und iFolder-Ordner einer bestimmten iFolder-Dom&auml;ne der Version 3.7 oder h&ouml;her verwalten. Sie k&ouml;nnen LDAP-Benutzer f&uuml;r die Verwendung einer iFolder-Dom&auml;ne aktivieren sowie die in der iFolder-Dom&auml;ne teilnehmenden iFolder-Server verwalten. Mit Web Admin k&ouml;nnen Sie auch die Verschl&uuml;sselung von Benutzerdaten erzwingen. Die Web Admin-Konsole bietet umfassende Berichte wie beispielsweise Berichte zum Serverstatus, zu iFolder-Konten oder zu Benutzerkontoinformationen. 
   </p>
 	
   
