--- a/src/admin/help/es/users.html
+++ b/src/admin/help/es/users.html
@@ -54,7 +54,7 @@
             with a line beneath it.
        --> 
   <h3 class="head3b">Gesti&oacute;n de una cuenta de usuario</h3>
-  <p> Esta interfaz le permite gestionar los usuarios de iFolder del dominio iFolder seleccionado. La herramienta de b&uacute;squeda le ayudar&aacute; a localizar la cuenta de usuario de Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 que desea gestionar. </p>
+  <p> Esta interfaz le permite gestionar los usuarios de iFolder del dominio iFolder seleccionado. La herramienta de b&uacute;squeda le ayudar&aacute; a localizar la cuenta de usuario de Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 o posterior que desea gestionar. </p>
 	
   <P><B><FONT SIZE="-1">NOTA:</FONT></B> <FONT SIZE="-1"> el t&eacute;rmino <i>usuarios de iFolder </i> hace referencia tanto a usuarios individuales como a grupos LDAP.</FONT></P>
 	<BLOCKQUOTE CLASS="blockquote"><P><BR>
