--- a/src/admin/help/es/webacc.html
+++ b/src/admin/help/es/webacc.html
@@ -57,7 +57,7 @@
        --> 
   <h3 class="head3b">Inicio de Web Admin</h3>
   
-  <p>La consola de Web Admin permite gestionar servidores, valores de configuraci&oacute;n de directivas, usuarios de iFolder y carpetas iFolder en un dominio concreto de iFolder 3.7. Es posible habilitar a usuarios para el dominio iFolder a partir de usuarios LDAP y gestionar los servidores iFolder que participen en el dominio iFolder. Web Admin tambi&eacute;n le permite aplicar el cifrado a los usuarios. La consola de Web Admin ofrece la opci&oacute;n de generar informes mejorados que incluyan el estado general del servidor, los informes de cuenta de iFolder e informaci&oacute;n sobre la cuenta del usuario. 
+  <p>La consola de Web Admin permite gestionar servidores, valores de configuraci&oacute;n de directivas, usuarios de iFolder y carpetas iFolder en un dominio concreto de iFolder 3.7 o posterior. Es posible habilitar a usuarios para el dominio iFolder a partir de usuarios LDAP y gestionar los servidores iFolder que participen en el dominio iFolder. Web Admin tambi&eacute;n le permite aplicar el cifrado a los usuarios. La consola de Web Admin ofrece la opci&oacute;n de generar informes mejorados que incluyan el estado general del servidor, los informes de cuenta de iFolder e informaci&oacute;n sobre la cuenta del usuario. 
   </p>
 	
   
