--- a/src/admin/help/fr/ldapsettings.html
+++ b/src/admin/help/fr/ldapsettings.html
@@ -53,7 +53,7 @@
 <!-- This is the start of the Help Content Layer --> <div id="helpcontent"> <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> <h3 class="head3b">Gestion des param&egrave;tres LDAP du syst&egrave;me iFolder</h3>
-  <p> Cette interface permet de modifier les param&egrave;tres LDAP du serveur Novell<SUP><SMALL>&reg;</SMALL></SUP> iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 s&eacute;lectionn&eacute; dans ce domaine iFolder. </p>
+  <p> Cette interface permet de modifier les param&egrave;tres LDAP du serveur Novell<SUP><SMALL>&reg;</SMALL></SUP> iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 s&eacute;lectionn&eacute; ou d'une version ult&eacute;rieure dans ce domaine iFolder. </p>
   
   <H3><A NAME="modify"></A>Modification des param&egrave;tres LDAP</H3><P>Modifiez les champs suivants, puis cliquez sur <i>OK</i> pour appliquer vos modifications :</P><TABLE WIDTH="93%" BORDER="1"><TR><TD CLASS="tablehead2"><P>Param&egrave;tre</P></TD><TD CLASS="tablehead2"><P>Description</P></TD></TR>
 <TR><TD VALIGN="TOP">
