--- a/src/admin/help/fr/login.html
+++ b/src/admin/help/fr/login.html
@@ -1,4 +1,4 @@
-﻿<html>
+<html>
 
    <head>
      <meta http-equiv="content-type" content="text/html;charset=UTF-8">
@@ -58,7 +58,7 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
        --> 
   <h3 class="head3b">Login &agrave; Web Admin</h3>
   
-  <P>Loguez-vous &agrave; Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 Web Admin pour g&eacute;rer les dossiers iFolder et les utilisateurs. Le nom d'utilisateur et le mot de passe de l'administrateur iFolder sont authentifi&eacute;s aupr&egrave;s des services d'annuaire LDAP. </P>
+  <P>Loguez-vous &agrave; Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 Web Admin ou &agrave; une version ult&eacute;rieure pour g&eacute;rer les dossiers iFolder et les utilisateurs. Le nom d'utilisateur et le mot de passe de l'administrateur iFolder sont authentifi&eacute;s aupr&egrave;s des services d'annuaire LDAP. </P>
   <P>Vous pouvez &eacute;galement sp&eacute;cifier la langue &agrave; utiliser parmi celles prises en charge. G&eacute;n&eacute;ralement, il s'agit de la m&ecirc;me langue que le code de langue utilis&eacute; pour le serveur d'entreprise iFolder et votre ordinateur local. N'oubliez pas de configurer le param&egrave;tre de langues de votre navigateur pour qu'il prenne en charge la langue souhait&eacute;e. </P>
 <OL>
   <LI>
