--- a/src/admin/help/fr/users.html
+++ b/src/admin/help/fr/users.html
@@ -54,7 +54,7 @@
             with a line beneath it.
        --> 
   <h3 class="head3b">Gestion d'un compte utilisateur</h3>
-  <p> Cette interface permet de g&eacute;rer des utilisateurs iFolder dans le domaine iFolder s&eacute;lectionn&eacute;. L'outil de recherche vous aide &agrave; localiser le compte utilisateur Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP>3.7 &agrave; g&eacute;rer. </p>
+  <p> Cette interface permet de g&eacute;rer des utilisateurs iFolder dans le domaine iFolder s&eacute;lectionn&eacute;. L'outil de recherche vous aide &agrave; localiser le compte utilisateur Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 ou version ult&eacute;rieure &agrave; g&eacute;rer. </p>
 	
   <P><B><FONT SIZE="-1">REMARQUE :</FONT></B> <FONT SIZE="-1">le terme <i>utilisateurs iFolder</i> fait r&eacute;f&eacute;rence &agrave; la fois aux utilisateurs individuels et aux groupes LDAP.</FONT></P>
 	<BLOCKQUOTE CLASS="blockquote"><P><BR>
