--- a/src/admin/help/fr/webacc.html
+++ b/src/admin/help/fr/webacc.html
@@ -57,7 +57,7 @@
        --> 
   <h3 class="head3b">Lancement de Web Admin</h3>
   
-  <p>La console Web Admin vous permet de g&eacute;rer des serveurs, des param&egrave;tres de strat&eacute;gie, des utilisateurs iFolder et des dossiers iFolder dans un domaine iFolder 3.7 sp&eacute;cifique. Vous pouvez autoriser des utilisateurs &agrave; acc&eacute;der au domaine iFolder des utilisateurs LDAP et g&eacute;rer des serveurs iFolder participant au domaine iFolder. Avec Web Admin, vous pouvez &eacute;galement appliquer le codage aux utilisateurs. La console Web Admin pourra alors produire des rapports am&eacute;lior&eacute;s incluant l'&eacute;tat g&eacute;n&eacute;ral du serveur, des rapports sur les comptes iFolder et des informations concernant les comptes utilisateur. 
+  <p>La console Web Admin vous permet de g&eacute;rer des serveurs, des param&egrave;tres de strat&eacute;gie, des utilisateurs iFolder et des dossiers iFolder dans un domaine iFolder 3.7 ou version ult&eacute;rieure sp&eacute;cifique. Vous pouvez autoriser des utilisateurs &agrave; acc&eacute;der au domaine iFolder des utilisateurs LDAP et g&eacute;rer des serveurs iFolder participant au domaine iFolder. Avec Web Admin, vous pouvez &eacute;galement appliquer le codage aux utilisateurs. La console Web Admin pourra alors produire des rapports am&eacute;lior&eacute;s incluant l'&eacute;tat g&eacute;n&eacute;ral du serveur, des rapports sur les comptes iFolder et des informations concernant les comptes utilisateur. 
   </p>
 	
   
