--- a/src/admin/help/hu/ldapsettings.html
+++ b/src/admin/help/hu/ldapsettings.html
@@ -53,7 +53,7 @@
 <!-- This is the start of the Help Content Layer --> <div id="helpcontent"> <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> <h3 class="head3b">Az LDAP-be&aacute;ll&iacute;t&aacute;sok kezel&eacute;se az iFolder rendszerhez</h3>
-  <p> Ezen a kezelőfel&uuml;leten m&oacute;dos&iacute;that&oacute;k az ebben az iFolder tartom&aacute;nyban műk&ouml;dő, kijel&ouml;lt Novell<SUP><SMALL>&reg;</SMALL></SUP> iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 kiszolg&aacute;l&oacute; LDAP-be&aacute;ll&iacute;t&aacute;sai. </p>
+  <p> Ezen a kezelőfel&uuml;leten m&oacute;dos&iacute;that&oacute;k az ebben az iFolder-tartom&aacute;nyban műk&ouml;dő, kijel&ouml;lt Novell<SUP><SMALL>&reg;</SMALL></SUP> iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7-es vagy &uacute;jabb verzi&oacute;j&uacute; kiszolg&aacute;l&oacute; LDAP-be&aacute;ll&iacute;t&aacute;sai. </p>
   
   <H3><A NAME="modify"></A>LDAP-be&aacute;ll&iacute;t&aacute;sok m&oacute;dos&iacute;t&aacute;sa</H3><P>M&oacute;dos&iacute;tsa az al&aacute;bbi mezők n&eacute;melyik&eacute;nek tartalm&aacute;t, majd kattintson az <i>OK</i> gombra a v&aacute;ltoztat&aacute;sok &eacute;rv&eacute;nybe l&eacute;ptet&eacute;s&eacute;hez:</P><TABLE WIDTH="93%" BORDER="1"><TR><TD CLASS="tablehead2"><P>Param&eacute;ter</P></TD><TD CLASS="tablehead2"><P>Le&iacute;r&aacute;s</P></TD></TR>
 <TR><TD VALIGN="TOP">
