--- a/src/admin/help/hu/login.html
+++ b/src/admin/help/hu/login.html
@@ -1,4 +1,4 @@
-﻿<html>
+<html>
 
    <head>
      <meta http-equiv="content-type" content="text/html;charset=UTF-8">
@@ -58,7 +58,7 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
        --> 
   <h3 class="head3b">Bejelentkez&eacute;s a Web Admin szolg&aacute;ltat&aacute;sba</h3>
   
-  <P>Az iFolder mapp&aacute;k &eacute;s felhaszn&aacute;l&oacute;k kezel&eacute;s&eacute;hez jelentkezzen be a Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 Web Admin szolg&aacute;ltat&aacute;sba. A rendszer az LDAP k&ouml;nyvt&aacute;rszolg&aacute;ltat&aacute;s alapj&aacute;n hiteles&iacute;ti az iFolder rendszergazdai felhaszn&aacute;l&oacute;nev&eacute;t &eacute;s jelszav&aacute;t. </P>
+  <P>Az iFolder mapp&aacute;k &eacute;s felhaszn&aacute;l&oacute;k kezel&eacute;s&eacute;hez jelentkezzen be a Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7-es vagy &uacute;jabb verzi&oacute;j&aacute;nak Web Admin szolg&aacute;ltat&aacute;s&aacute;ba. A rendszer az LDAP k&ouml;nyvt&aacute;rszolg&aacute;ltat&aacute;s alapj&aacute;n hiteles&iacute;ti az iFolder rendszergazdai felhaszn&aacute;l&oacute;nev&eacute;t &eacute;s jelszav&aacute;t. </P>
   <P>Megadhat&oacute;, hogy a rendszer a t&aacute;mogatott nyelvek k&ouml;z&uuml;l melyiket haszn&aacute;lja.  Ez &aacute;ltal&aacute;ban az a nyelv, amely az iFolder v&aacute;llalati kiszolg&aacute;l&oacute; &eacute;s a helyi sz&aacute;m&iacute;t&oacute;g&eacute;p nyelvk&oacute;dj&aacute;nak felel meg.  Ne felejtse be&aacute;ll&iacute;tani a b&ouml;ng&eacute;sző nyelvbe&aacute;ll&iacute;t&aacute;sait a k&iacute;v&aacute;nt nyelv t&aacute;mogat&aacute;s&aacute;hoz. </P>
 <OL>
   <LI>
