--- a/src/admin/help/hu/systeminfo.html
+++ b/src/admin/help/hu/systeminfo.html
@@ -55,7 +55,7 @@ div.Section1
 <!-- This is the start of the Help Content Layer --> <div id="helpcontent"> <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> <h3 class="head3b">Az iFolder rendszer kezel&eacute;se</h3>
-  <p> Ezzel a fel&uuml;lettel lehet kezelni a Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7. szolg&aacute;ltat&aacute;sokat a kiv&aacute;lasztott kiszolg&aacute;l&oacute;hoz.</p>
+  <p> Ezzel a fel&uuml;lettel lehet kezelni a Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7-es vagy &uacute;jabb verzi&oacute;j&aacute;nak szolg&aacute;ltat&aacute;sait a kiv&aacute;lasztott kiszolg&aacute;l&oacute;hoz.</p>
   <P>Ebben a s&uacute;g&oacute;ban az al&aacute;bbi inform&aacute;ci&oacute;k ismertet&eacute;se tal&aacute;lhat&oacute;:</P>
   <blockquote> <P><A HREF="#sytemsettings" TARGET="_self">Rendszerbe&aacute;ll&iacute;t&aacute;sok </A> <BR><A HREF="#status" TARGET="_self">Hozz&aacute;f&eacute;r&eacute;s &uacute;jraenged&eacute;lyez&eacute;si &aacute;llapota</a><BR><A HREF="#admin" TARGET="_self">Rendszergazd&aacute;k lap</a><BR> <A HREF="#policy" TARGET="_self">H&aacute;zirendek </a><BR></P></BLOCKQUOTE>
   
@@ -118,8 +118,8 @@ div.Section1
         <span style="font-size:11.0pt;font-family:Arial;">A <i>Rendszergazdai konzol</i> be&aacute;ll&iacute;t&aacute;s kiv&aacute;laszt&aacute;s&aacute;val enged&eacute;lyezheti a rendszergazd&aacute;k sz&aacute;m&aacute;ra a csoportok &eacute;s csoporttagok lemezkv&oacute;t&aacute;j&aacute;nak explicit kezel&eacute;s&eacute;t. A be&aacute;ll&iacute;t&aacute;s kiv&aacute;laszt&aacute;sa ut&aacute;n a felhaszn&aacute;l&oacute;khoz hozz&aacute;rendelt lemezkv&oacute;ta korl&aacute;tozott lesz, &eacute;s nem haladhatja meg a csoport &ouml;sszes&iacute;tett lemezhaszn&aacute;lat&aacute;t. A <i>Rendszergazdai konzol</i> be&aacute;ll&iacute;t&aacute;s alap&eacute;rtelmez&eacute;s szerint ki van v&aacute;lasztva.</span></p>
         <p class="Normal2">
         <span style="font-size:11.0pt;font-family:Arial;">A <i>Szinkroniz&aacute;ci&oacute;s motor</i> be&aacute;ll&iacute;t&aacute;ssal enged&eacute;lyezheti, hogy a szinkroniz&aacute;ci&oacute;s motor a kiszolg&aacute;l&oacute;n kezelje a csoportok &ouml;sszes&iacute;tett lemezkv&oacute;t&aacute;j&aacute;t. A szinkroniz&aacute;ci&oacute;s motor gondoskodik arr&oacute;l, hogy a csoport felhaszn&aacute;l&oacute;i sz&aacute;m&aacute;ra be&aacute;ll&iacute;tott lemezkv&oacute;t&aacute;k &ouml;sszess&eacute;ge ne haladja meg a csoport &ouml;sszes&iacute;tett lemezkv&oacute;t&aacute;j&aacute;t.</span></p>
-        <p class="Normal2">
-        &nbsp;</p>
+        <p class="Normal2">&nbsp;
+        </p>
         </TD></TR><TR><TD VALIGN="TOP">
         <span style="font-size: 11.0pt; font-family: Arial; ">Elk&uuml;l&ouml;n&iacute;tett csoportok</span></TD><TD>
         <span style="font-size: 11.0pt; font-family: Arial; ">Lehetőv&eacute; teszi, hogy a csoportokat egym&aacute;st&oacute;l f&uuml;ggetlen egys&eacute;gekre ossza fel. Ez&aacute;ltal az egyes csoportok tagjai nem f&eacute;rnek hozz&aacute; a t&ouml;bbi csoport megosztott iFolder mapp&aacute;ihoz. Az <i>Elk&uuml;l&ouml;n&iacute;tett csoportok l&eacute;trehoz&aacute;sa</i> jel&ouml;lőn&eacute;gyzet bejel&ouml;l&eacute;s&eacute;vel &aacute;ll&iacute;thatja be, hogy iFolder mapp&aacute;kat csak az azonos csoportba tartoz&oacute; tagok k&ouml;z&ouml;tt lehessen megosztani.</span><p>
@@ -298,7 +298,7 @@ div.Section1
 <TR>
       <TD VALIGN="TOP"> 
         <h4><span style="FONT-SIZE: 9.5pt; FONT-FAMILY: Arial">iFolder mappa / felhaszn&aacute;l&oacute; h&aacute;zirend</span></h4>
-        <h4> &nbsp;</h4>
+        <h4>&nbsp; </h4>
       </TD>
       <TD> 
         <p class="Normal2">
@@ -412,7 +412,7 @@ div.Section1
    
 
 <H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="Kapcsol&oacute;d&oacute; t&eacute;mak&ouml;r&ouml;k" align="top">&nbsp;Kapcsol&oacute;d&oacute; t&eacute;mak&ouml;r&ouml;k</H4><BLOCKQUOTE class="task1">
-<P ><A HREF="userdetails.html">Felhaszn&aacute;l&oacute; adatai </A><BR><A HREF="ifolderdetails.html">Az iFolder mappa adatainak kezel&eacute;se</A><BR><A HREF="servers.html">Az iFolder kiszolg&aacute;l&oacute;k kezel&eacute;se</A><BR><A HREF="ifolders.html">iFolder mapp&aacute;k kezel&eacute;se</A><BR><A HREF="reports.html#orphan" TARGET="_self">Jelent&eacute;sek </A></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Ugr&aacute;s az oldal tetej&eacute;re"></A></P><P>&nbsp;</P><P CLASS="copyright">A v&eacute;djegyjelek (<SUP><SMALL>&reg;</SMALL></SUP>, <SUP><SMALL>TM</SMALL></SUP> stb.) a Novell v&eacute;djegyeit jel&ouml;lik, a csillag (*) karakter harmadik f&eacute;l v&eacute;djegy&eacute;t jel&ouml;li. Tov&aacute;bbi inform&aacute;ci&oacute;k a <A HREF="imgr_legalnotices.html" TARGET="_self" ><font color="#cfcdc6">Szerzői jogi megjegyz&eacute;sek c&iacute;mű t&eacute;mak&ouml;rben tal&aacute;lhat&oacute;k</font></A>.</P></div><!-- This is the end of the Help Content layer. --> 
+<P ><A HREF="userdetails.html">Felhaszn&aacute;l&oacute; adatai </A><BR><A HREF="ifolderdetails.html">Az iFolder mappa adatainak kezel&eacute;se</A><BR><A HREF="servers.html">Az iFolder kiszolg&aacute;l&oacute;k kezel&eacute;se</A><BR><A HREF="ifolders.html">iFolder mapp&aacute;k kezel&eacute;se</A><BR><A HREF="reports.html#orphan" TARGET="_self">Jelent&eacute;sek </A></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Ugr&aacute;s az oldal tetej&eacute;re"></A></P><P>&nbsp;</P><P CLASS="copyright">A v&eacute;djegyjelek (<SUP><SMALL>&reg;</SMALL></SUP>, <SUP><SMALL>TM</SMALL></SUP> stb.) a Novell v&eacute;djegyeit jelzik. A csillag (*) karakter harmadik f&eacute;l v&eacute;djegy&eacute;t jel&ouml;li. Tov&aacute;bbi inform&aacute;ci&oacute;k a <A HREF="imgr_legalnotices.html" TARGET="_self" ><font color="#cfcdc6">Szerzői jogi megjegyz&eacute;sek c&iacute;mű t&eacute;mak&ouml;rben tal&aacute;lhat&oacute;k</font></A>.</P></div><!-- This is the end of the Help Content layer. --> 
 </body>
 
 </html>
