--- a/src/admin/help/hu/users.html
+++ b/src/admin/help/hu/users.html
@@ -54,7 +54,7 @@
             with a line beneath it.
        --> 
   <h3 class="head3b">Felhaszn&aacute;l&oacute;i fi&oacute;k kezel&eacute;se</h3>
-  <p> Ezzel a fel&uuml;lettel lehet kezelni a kijel&ouml;lt iFolder tartom&aacute;ny iFolder felhaszn&aacute;l&oacute;it. A keresőeszk&ouml;zzel megkeresheti a kezelni k&iacute;v&aacute;nt Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 felhaszn&aacute;l&oacute;i fi&oacute;kot. </p>
+  <p> Ezzel a fel&uuml;lettel lehet kezelni a kijel&ouml;lt iFolder tartom&aacute;ny iFolder felhaszn&aacute;l&oacute;it. A keresőeszk&ouml;zzel megkeresheti a kezelni k&iacute;v&aacute;nt Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7-es vagy &uacute;jabb verzi&oacute;j&uacute; felhaszn&aacute;l&oacute;i fi&oacute;kot. </p>
 	
   <P><B><FONT SIZE="-1">MEGJEGYZ&Eacute;S:</FONT></B> <FONT SIZE="-1">Az <i>iFolder felhaszn&aacute;l&oacute;k</i> kifejez&eacute;s az egy&eacute;ni felhaszn&aacute;l&oacute;kat &eacute;s az LDAP-csoportokat egyar&aacute;nt jelenti.</FONT></P>
 	<BLOCKQUOTE CLASS="blockquote"><P><BR>
