--- a/src/admin/help/it/login.html
+++ b/src/admin/help/it/login.html
@@ -58,7 +58,7 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
        --> 
   <h3 class="head3b">Login ad Amministratore Web</h3>
   
-  <P>Eseguire il login ad Amministratore Web di Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 per gestire le cartelle iFolder e gli utenti. Il nome utente e la password dell'amministratore iFolder vengono autenticati in base ai servizi di directory LDAP. </P>
+  <P>Eseguire il login ad Amministratore Web di Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 o versione successiva per gestire le cartelle iFolder e gli utenti. Il nome utente e la password dell'amministratore iFolder vengono autenticati in base ai servizi di directory LDAP. </P>
   <P>&Egrave; inoltre possibile specificare le lingue supportate da utilizzare.  Si tratta in genere della stessa lingua del server aziendale iFolder e del computer locale dell'utente.  Verificare che l'impostazione delle lingue nel browser sia configurata per supportare la lingua desiderata. </P>
 <OL>
   <LI>
