--- a/src/admin/help/it/systeminfo.html
+++ b/src/admin/help/it/systeminfo.html
@@ -55,7 +55,7 @@ div.Section1
 <!-- This is the start of the Help Content Layer --> <div id="helpcontent"> <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> <h3 class="head3b">Gestione del sistema iFolder </h3>
-  <p> Utilizzare questa interfaccia per gestire i servizi Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 per il server selezionato.</p>
+  <p> Utilizzare questa interfaccia per gestire i servizi Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 o versione successiva per il server selezionato.</p>
   <P>In questa guida vengono illustrate le informazioni seguenti:</P>
   <blockquote> <P><A HREF="#sytemsettings" TARGET="_self">Impostazioni di sistema</A> <BR><A HREF="#status" TARGET="_self">Stato del nuovo provisioning</a><BR><A HREF="#admin" TARGET="_self">Scheda Amministratori</a><BR> <A HREF="#policy" TARGET="_self">Norme </a><BR></P></BLOCKQUOTE>
   
@@ -118,8 +118,8 @@ div.Section1
         <span style="font-size:11.0pt;font-family:Arial;">Selezionare l'opzione relativa alla <i>console di amministrazione</i> per consentire agli amministratori di gestire in modo esplicito la quota del disco per i gruppi e i membri di un gruppo. Quando si seleziona questa opzione, la quota del disco assegnata agli utenti viene limitata in modo che non superi l'uso del disco complessivo del gruppo. Per default, l'opzione relativa alla <i>console dell'amministratore</i> &egrave; selezionata.</span></p>
         <p class="Normal2">
         <span style="font-size:11.0pt;font-family:Arial;">Selezionare l'opzione relativa al <i>motore di sincronizzazione</i> per abilitare il motore di sincronizzazione per la gestione della quota del disco complessiva per i gruppi in back end. Il motore di sincronizzazione garantisce che la quota del disco per tutti gli utenti di un gruppo non superi la quota del disco complessiva del gruppo.</span></p>
-        <p class="Normal2">
-        &nbsp;</p>
+        <p class="Normal2">&nbsp;
+        </p>
         </TD></TR><TR><TD VALIGN="TOP">
         <span style="font-size: 11.0pt; font-family: Arial; "> Gruppi segregati</span></TD><TD>
         <span style="font-size: 11.0pt; font-family: Arial; "> Consente di segregare i gruppi in entit&agrave; indipendenti e garantire che i membri di un gruppo non siano in grado di accedere ai membri dell'altro gruppo per la condivisione delle cartelle iFolder. Selezionare la casella di controllo relativa alla <i>Creazione di gruppi segregati</i> per abilitare la condivisione delle cartelle iFolder solo tra i membri dello stesso gruppo.</span><p>
@@ -298,7 +298,7 @@ div.Section1
 <TR>
       <TD VALIGN="TOP"> 
         <h4><span style="FONT-SIZE: 9.5pt; FONT-FAMILY: Arial"> Norma delle cartelle iFolder per utente</span></h4>
-        <h4> &nbsp;</h4>
+        <h4>&nbsp; </h4>
       </TD>
       <TD> 
         <p class="Normal2">
