--- a/src/admin/help/it/users.html
+++ b/src/admin/help/it/users.html
@@ -54,7 +54,7 @@
             with a line beneath it.
        --> 
   <h3 class="head3b">Gestione di un conto utente</h3>
-  <p> Utilizzare questa interfaccia per gestire gli utenti iFolder nel dominio iFolder selezionato. Lo strumento di ricerca consente di individuare il conto utente Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 che si desidera gestire. </p>
+  <p> Utilizzare questa interfaccia per gestire gli utenti iFolder nel dominio iFolder selezionato. Lo strumento di ricerca consente di individuare il conto utente Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 o versione successiva che si desidera gestire. </p>
 	
   <P><B><FONT SIZE="-1">NOTA:</FONT></B> <FONT SIZE="-1">con il termine <i>utenti iFolder</i> si fa riferimento sia ai singoli utenti sia ai gruppi LDAP.</FONT></P>
 	<BLOCKQUOTE CLASS="blockquote"><P><BR>
