--- a/src/admin/help/it/webacc.html
+++ b/src/admin/help/it/webacc.html
@@ -57,7 +57,7 @@
        --> 
   <h3 class="head3b">Avvio di Amministratore Web</h3>
   
-  <p>La console di Amministratore Web consente di gestire server, impostazioni delle norme, utenti e cartelle iFolder in un dominio iFolder 3.7 specifico. &Egrave; possibile abilitare utenti al dominio iFolder dagli utenti LDAP e gestire i server iFolder che partecipano al dominio iFolder. Con Amministratore Web &egrave; inoltre possibile imporre la cifratura degli utenti. La console &egrave; in grado di produrre rapporti avanzati che includono lo stato complessivo del server, i rapporti del conto iFolder e le informazioni relative al conto utente. 
+  <p>La console di Amministratore Web consente di gestire server, impostazioni delle norme, utenti e cartelle iFolder in un dominio iFolder 3.7 o versione successiva specifico. &Egrave; possibile abilitare utenti al dominio iFolder dagli utenti LDAP e gestire i server iFolder che partecipano al dominio iFolder. Con Amministratore Web &egrave; inoltre possibile imporre la cifratura degli utenti. La console &egrave; in grado di produrre rapporti avanzati che includono lo stato complessivo del server, i rapporti del conto iFolder e le informazioni relative al conto utente. 
   </p>
 	
   
