--- a/src/admin/help/ja/ldapsettings.html
+++ b/src/admin/help/ja/ldapsettings.html
@@ -53,7 +53,7 @@
 <!-- This is the start of the Help Content Layer --> <div id="helpcontent"> <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> <h3 class="head3b">iFolderシステムでのLDAP設定の管理</h3>
-  <p> このインタフェースでは、このiFolderドメイン上で選択されたNovell<SUP><SMALL>&reg;</SMALL></SUP> iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7サーバのLDAP設定を変更できます。 </p>
+  <p> このインタフェースでは、このiFolderドメイン上で選択されたNovell<SUP><SMALL>&reg;</SMALL></SUP> iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7以降のサーバのLDAP設定を変更できます。 </p>
   
   <H3><A NAME="modify"></A> LDAP 設定の変更</H3><P>次のフィールドを変更し、［OK］をクリックして変更を適用します。<i></i></P><TABLE WIDTH="93%" BORDER="1"><TR><TD CLASS="tablehead2"><P>パラメータ</P></TD><TD CLASS="tablehead2"><P>説明</P></TD></TR>
 <TR><TD VALIGN="TOP">
@@ -62,7 +62,7 @@
         <P>LDAP管理者の完全識別名を指定します。iFolder管理者と同じ名前または別の名前を指定できます。</P>
       </TD></TR>
 	  <TR><TD VALIGN="TOP">
-        <P>LDAP Admin?Password? (LDAP管理者のパスワード)</P>
+        <P>LDAP Admin Password (LDAP管理者のパスワード)</P>
       </TD><TD>
         <P>このパスワードは、LDAPサーバに対してLDAP管理者ユーザを認証する場合に使用されます。 </P>
         
