--- a/src/admin/help/ja/login.html
+++ b/src/admin/help/ja/login.html
@@ -58,7 +58,7 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
        --> 
   <h3 class="head3b">Web Adminへのログイン</h3>
   
-  <P>Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 Web Adminへログインすると、iFolderとユーザを管理できます。iFolder管理者のユーザ名とパスワードは、LDAPディレクトリサービスを介して認証されます。 </P>
+  <P>Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7以降のWeb Adminにログインすると、iFolderとユーザを管理できます。iFolder管理者のユーザ名とパスワードは、LDAPディレクトリサービスを介して認証されます。 </P>
   <P>また、使用するサポート言語も指定できます。この言語は通常、iFolderエンタープライズサーバおよびローカルコンピュータの言語コードと同じ言語です。目的の言語をサポートするように、ブラウザの言語設定を設定してください。 </P>
 <OL>
   <LI>
