--- a/src/admin/help/ja/systeminfo.html
+++ b/src/admin/help/ja/systeminfo.html
@@ -55,7 +55,7 @@ div.Section1
 <!-- This is the start of the Help Content Layer --> <div id="helpcontent"> <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> <h3 class="head3b">iFolderシステムの管理</h3>
-  <p> このインタフェースでは、選択したサーバのNovell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7サービスを管理できます。</p>
+  <p> このインタフェースでは、選択したサーバのNovell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7以降のサービスを管理できます。</p>
   <P>このヘルプでは、次の情報について説明します。</P>
   <blockquote> <P><A HREF="#sytemsettings" TARGET="_self">システム設定</A> <BR><A HREF="#status" TARGET="_self">再プロビジョニングステータス</a><BR><A HREF="#admin" TARGET="_self">［Administrators］タブ</a><BR> <A HREF="#policy" TARGET="_self">ポリシー </a><BR></P></BLOCKQUOTE>
   
@@ -118,8 +118,8 @@ div.Section1
         <span style="font-size:11.0pt;font-family:Arial;">［Administrator Console (管理者コンソール)<i></i>］オプションを選択すると、グループとグループメンバーのディスク割り当て量を管理者が明示的に管理できます。このオプションを選択すると、グループの合計ディスク使用量を超えないように、ユーザに割り当てられるディスク割り当て量が制限されます。デフォルトでは、［Administrator Console (管理者コンソール)<i></i>］オプションが選択されています。</span></p>
         <p class="Normal2">
         <span style="font-size:11.0pt;font-family:Arial;">［Sync Engine (同期エンジン)<i></i>］オプションを選択すると、同期エンジンで、グループの合計ディスク割り当て量をバックエンドで管理できます。同期エンジンを使用すると、グループ内のすべてのユーザに対するディスク割り当て量がグループの合計ディスク割り当て量を超えないようにすることができます。</span></p>
-        <p class="Normal2">
-        &nbsp;</p>
+        <p class="Normal2">&nbsp;
+        </p>
         </TD></TR><TR><TD VALIGN="TOP">
         <span style="font-size: 11.0pt; font-family: Arial; ">分離グループ</span></TD><TD>
         <span style="font-size: 11.0pt; font-family: Arial; ">個々のグループを個別のエンティティとして分離して、あるグループのメンバーに別のグループのメンバーがアクセスして、iFolderを共有できないようにします。［Create Segregated Groups (分離グループの作成)<i></i>］チェックボックスをオンにすると、同じグループのメンバー間でのみiFolderを共有できます。</span><p>
@@ -272,7 +272,7 @@ div.Section1
         </ul>
         <BR>
         <B>取り消し</B><BR>
-        [取り消し]を選択すると、iFolderシステム内のすべてのiFolderの共有メンバーが削除されます。<br>
+        ［取り消し］を選択すると、iFolderシステム内のすべてのiFolderの共有メンバーが削除されます。<br>
 		
       </TD></TR> 
 
@@ -298,7 +298,7 @@ div.Section1
 <TR>
       <TD VALIGN="TOP"> 
         <h4><span style="FONT-SIZE: 9.5pt; FONT-FAMILY: Arial"> iFolder Per User (ユーザごとのiFolder)ポリシー</span></h4>
-        <h4> &nbsp;</h4>
+        <h4>&nbsp; </h4>
       </TD>
       <TD> 
         <p class="Normal2">
