--- a/src/admin/help/ja/users.html
+++ b/src/admin/help/ja/users.html
@@ -54,7 +54,7 @@
             with a line beneath it.
        --> 
   <h3 class="head3b">ユーザアカウントの管理</h3>
-  <p> このインタフェースでは、選択したiFolderドメイン内のiFolderユーザを管理できます。検索ツールを使用すると、管理するNovell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7ユーザアカウントを簡単に探すことができます。 </p>
+  <p> このインタフェースでは、選択したiFolderドメイン内のiFolderユーザを管理できます。検索ツールを使用すると、管理するNovell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7以降のユーザアカウントを簡単に探すことができます。 </p>
 	
   <P><B><FONT SIZE="-1">注意:</FONT></B> <FONT SIZE="-1">「iFolderユーザ」とは、個々のユーザおよびLDAPGroupの両方を指します。<i></i></FONT></P>
 	<BLOCKQUOTE CLASS="blockquote"><P><BR>
