--- a/src/admin/help/ja/webacc.html
+++ b/src/admin/help/ja/webacc.html
@@ -57,7 +57,7 @@
        --> 
   <h3 class="head3b">Web Adminの起動</h3>
   
-  <p>Web Adminコンソールを使用すると、iFolder 3.7ドメイン内のサーバ、ポリシー設定、iFolderユーザ、およびiFolderを管理できます。また、LDAPユーザからiFolderドメインに対してユーザを有効にしたり、iFolderドメインに参加しているiFolderサーバを管理したりできます。Web Adminでは、ユーザに対して暗号化を強制することもできます。Web Adminコンソールには、サーバ全体のステータスを含む拡張レポート、iFolderアカウントレポート、およびユーザアカウント情報を生成する機能が用意されています。 
+  <p>Web Adminコンソールを使用すると、iFolder 3.7以降のドメイン内のサーバ、ポリシー設定、iFolderユーザ、およびiFolderを管理できます。また、LDAPユーザからiFolderドメインに対してユーザを有効にしたり、iFolderドメインに参加しているiFolderサーバを管理したりすることができます。Web Adminでは、ユーザに対して暗号化を強制することもできます。Web Adminコンソールには、サーバ全体のステータスを含む拡張レポート、iFolderアカウントレポート、およびユーザアカウント情報を生成する機能が用意されています。 
   </p>
 	
   
