--- a/src/admin/help/pl/ldapsettings.html
+++ b/src/admin/help/pl/ldapsettings.html
@@ -53,7 +53,7 @@
 <!-- This is the start of the Help Content Layer --> <div id="helpcontent"> <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> <h3 class="head3b">Zarządzanie ustawieniami LDAP systemu iFolder</h3>
-  <p> Użyj tego interfejsu do zmodyfikowania ustawień LDAP dla wybranego serwera Novell<SUP><SMALL>&reg;</SMALL></SUP> iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 w tej domenie iFolder. </p>
+  <p> Ten interfejs służy do modyfikowania ustawień LDAP dla wybranego serwera z programem Novell<SUP><SMALL>&reg;</SMALL></SUP> iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 lub nowszym w tej domenie iFolder. </p>
   
   <H3><A NAME="modify"></A>Modyfikowanie ustawień LDAP</H3><P>Zmodyfikuj dowolne z następujących p&oacute;l, a następnie kliknij przycisk <i>OK</i>, aby zastosować wprowadzone zmiany:</P><TABLE WIDTH="93%" BORDER="1"><TR><TD CLASS="tablehead2"><P>Parametr</P></TD><TD CLASS="tablehead2"><P>Opis</P></TD></TR>
 <TR><TD VALIGN="TOP">
