--- a/src/admin/help/pl/users.html
+++ b/src/admin/help/pl/users.html
@@ -54,7 +54,7 @@
             with a line beneath it.
        --> 
   <h3 class="head3b">Zarządzanie kontem użytkownika</h3>
-  <p> Ten interfejs służy do zarządzania użytkownikami programu iFolder w wybranej domenie iFolder. Narzędzie wyszukiwania ułatwia zlokalizowanie konta użytkownika programu Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7, kt&oacute;re ma być zarządzane. </p>
+  <p> Ten interfejs służy do zarządzania użytkownikami programu iFolder w wybranej domenie iFolder. Narzędzie wyszukiwania ułatwia zlokalizowanie konta użytkownika programu Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 lub nowszego, kt&oacute;re ma być zarządzane. </p>
 	
   <P><B><FONT SIZE="-1">UWAGA:</FONT></B> <FONT SIZE="-1">pojęcie <i>użytkownicy iFolderu</i> oznacza zar&oacute;wno użytkownik&oacute;w indywidualnych, jak i grupy LDAP.</FONT></P>
 	<BLOCKQUOTE CLASS="blockquote"><P><BR>
