--- a/src/admin/help/pl/webacc.html
+++ b/src/admin/help/pl/webacc.html
@@ -57,7 +57,7 @@
        --> 
   <h3 class="head3b">Uruchamianie programu Web Admin</h3>
   
-  <p>Konsola programu Web Admin umożliwia zarządzanie serwerami, ustawieniami założeń, użytkownikami programu iFolder oraz iFolderami w danej domenie systemu iFolder 3.7. Można dodawać użytkownik&oacute;w do domeny iFolder spośr&oacute;d użytkownik&oacute;w usługi LDAP i zarządzać serwerami iFolder znajdującymi się w domenie iFolder. Przy użyciu programu Web Admin można r&oacute;wnież wymuszać szyfrowanie na kontach użytkownik&oacute;w. Konsola programu Web Admin umożliwia generowanie rozbudowanych raport&oacute;w dotyczących og&oacute;lnego stanu serwera, kont programu iFolder oraz informacji o kontach użytkownik&oacute;w. 
+  <p>Konsola Web Admin umożliwia zarządzanie serwerami, ustawieniami założeń, użytkownikami programu iFolder oraz folderami iFolder w danej domenie programu iFolder 3.7 lub nowszego. Można dodawać użytkownik&oacute;w do domeny iFolder spośr&oacute;d użytkownik&oacute;w usługi LDAP i zarządzać serwerami iFolder znajdującymi się w domenie iFolder. Przy użyciu programu Web Admin można r&oacute;wnież wymuszać szyfrowanie na kontach użytkownik&oacute;w. Konsola programu Web Admin umożliwia generowanie rozbudowanych raport&oacute;w dotyczących og&oacute;lnego stanu serwera, kont programu iFolder oraz informacji o kontach użytkownik&oacute;w. 
   </p>
 	
   
