--- a/src/admin/help/ru/ldapsettings.html
+++ b/src/admin/help/ru/ldapsettings.html
@@ -53,7 +53,7 @@
 <!-- This is the start of the Help Content Layer --> <div id="helpcontent"> <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> <h3 class="head3b">Управление параметрами LDAP системы iFolder</h3>
-  <p> Используйте данный интерфейс для изменения параметров LDAP выбранного сервера Novell<SUP><SMALL>&reg;</SMALL></SUP> iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 в данном домене iFolder. </p>
+  <p> Используйте данный интерфейс для изменения параметров LDAP выбранного сервера Novell<SUP><SMALL>&reg;</SMALL></SUP> iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 или более поздней версии в этом домене iFolder. </p>
   
   <H3><A NAME="modify"></A>Изменение параметров LDAP</H3><P>Измените любые значения в следующих полях и щелкните <i>ОК</i>, чтобы применить изменения:</P><TABLE WIDTH="93%" BORDER="1"><TR><TD CLASS="tablehead2"><P>Параметр</P></TD><TD CLASS="tablehead2"><P>Описание</P></TD></TR>
 <TR><TD VALIGN="TOP">
