--- a/src/admin/help/ru/login.html
+++ b/src/admin/help/ru/login.html
@@ -1,4 +1,4 @@
-﻿<html>
+<html>
 
    <head>
      <meta http-equiv="content-type" content="text/html;charset=UTF-8">
@@ -58,7 +58,7 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
        --> 
   <h3 class="head3b">Вход в приложение веб-администрирования</h3>
   
-  <P>Войдите в приложение веб-администрирования Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7, чтобы управлять папками iFolder и пользователями. Проверка имени и пароля администратора iFolder выполняется в базе данных сервиса Каталога LDAP. </P>
+  <P>Войдите в приложение веб-администрирования Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 или более поздней версии, чтобы получить возможность управления папками iFolder и пользователями. Проверка имени и пароля администратора iFolder выполняется в базе данных сервиса Каталога LDAP. </P>
   <P>Кроме того, можно указать, какой из поддерживаемых языков следует использовать. Этот язык обычно соответствует коду языка сервера iFolder и локального компьютера. Убедитесь в том, что язык навигатора настроен для поддержки требуемого языка. </P>
 <OL>
   <LI>
