--- a/src/admin/help/ru/systeminfo.html
+++ b/src/admin/help/ru/systeminfo.html
@@ -55,7 +55,7 @@ div.Section1
 <!-- This is the start of the Help Content Layer --> <div id="helpcontent"> <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> <h3 class="head3b">Управление системой iFolder</h3>
-  <p> Используйте данный интерфейс для управления сервисами Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 для выбранного сервера.</p>
+  <p> Используйте данный интерфейс для управления сервисами Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 или более поздней версии для выбранного сервера.</p>
   <P>В данной справке рассматривается следующая информация:</P>
   <blockquote> <P><A HREF="#sytemsettings" TARGET="_self">Системные параметры</A> <BR><A HREF="#status" TARGET="_self">Состояние изменения доступа</a><BR><A HREF="#admin" TARGET="_self">Вкладка &quot;Администраторы&quot;</a><BR> <A HREF="#policy" TARGET="_self">Политики </a><BR></P></BLOCKQUOTE>
   
@@ -118,8 +118,9 @@ div.Section1
         <span style="font-size:11.0pt;font-family:Arial;">Опция <i>Консоль администратора</i> позволяет администраторам явным образом управлять квотой диска для групп и их членов. Выбор этой опции ограничивает квоту диска, назначенную пользователям, совокупным объемом используемого группой места на диске. Опция <i>Консоль администратора</i> выбрана по умолчанию.</span></p>
         <p class="Normal2">
         <span style="font-size:11.0pt;font-family:Arial;">Опция <i>Подсистема синхронизации</i> позволяет управлять совокупной квотой диска для групп в серверном компоненте с помощью подсистемы синхронизации. Подсистема синхронизации проверяет, чтобы квота диска для всех пользователей группы не превышала совокупную квоту диска группы.</span></p>
-        <p class="Normal2">
-        <span style="font-size:11.0pt;font-family:Arial;">Опция <i>Оба</i> позволяет использовать для управления совокупной квотой диска групп как консоль администратора, так и подсистему синхронизации.</span></TD></TR><TR><TD VALIGN="TOP">
+        <p class="Normal2">&nbsp;
+        </p>
+        </TD></TR><TR><TD VALIGN="TOP">
         <span style="font-size: 11.0pt; font-family: Arial; ">Выделенные группы</span></TD><TD>
         <span style="font-size: 11.0pt; font-family: Arial; "> Позволяет выделять группы в независимые объекты и изолировать при совместном использовании папок iFolder членов одной группы от доступа к ним членов другой группы. Установите флажок <i>Создать выделенные группы</i>, чтобы разрешить совместное использование папок iFolder только в пределах групп.</span><p>
         <span style="font-family: Arial; ">Примечание.</span> <span style="font-size: 11.0pt; font-family: Arial; ">Группа LDAPGroup не может быть ни дополнительным, ни основным администратором.</span></TD></TR></TABLE>
@@ -297,7 +298,7 @@ div.Section1
 <TR>
       <TD VALIGN="TOP"> 
         <h4><span style="FONT-SIZE: 9.5pt; FONT-FAMILY: Arial">Политика количества папок iFolder на одного пользователя</span></h4>
-        <h4> &nbsp;</h4>
+        <h4>&nbsp; </h4>
       </TD>
       <TD> 
         <p class="Normal2">
