--- a/src/admin/help/ru/users.html
+++ b/src/admin/help/ru/users.html
@@ -54,7 +54,7 @@
             with a line beneath it.
        --> 
   <h3 class="head3b">Управление учетной записью пользователя</h3>
-  <p> Используйте данный интерфейс для управления пользователями iFolder в выбранном домене iFolder. Найти необходимую учетную запись пользователя Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 можно с помощью средства поиска. </p>
+  <p> Используйте данный интерфейс для управления пользователями iFolder в выбранном домене iFolder. Найти необходимую учетную запись пользователя Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 или более поздней версии можно с помощью средства поиска. </p>
 	
   <P><B><FONT SIZE="-1">ПРИМЕЧАНИЕ.</FONT></B> <FONT SIZE="-1">Под <i>пользователями iFolder</i> подразумеваются как индивидуальные пользователи, так и группы LDAPGroup.</FONT></P>
 	<BLOCKQUOTE CLASS="blockquote"><P><BR>
@@ -107,7 +107,7 @@
     
     <LI> 
       <P>Щелкните &quot;Запретить&quot; для запрета доступа к iFolder.</P>
-      <P> Сеанс пользователя, вошедшего в систему на момент установки данного значения, продолжается до тех пор, пока не будет выполнен выход. Данная политика вступает в силу при следующей попытке пользователя выполнить вход с использованием своей учетной записи. Чтобы блокировка вступила в силу немедленно, необходимо перезапустить сервисы Apache для сервера iFolder. При этом выполняется отключение всех активных сеансов, включая сеансы пользователей.</P>
+      <P> Сеанс пользователя, вошедшего в систему на момент установки данного значения, продолжается до тех пор, пока не будет выполнен выход. Данная политика вступает в силу при следующей попытке пользователя войти в систему с использованием своей учетной записи. Чтобы блокировка вступила в силу немедленно, необходимо перезапустить сервисы Apache для сервера iFolder. При этом выполняется отключение всех активных сеансов, включая сеансы пользователей.</P>
     </LI></ul>
   </OL>
   <H3><A NAME="provision"></A>Персонификация и изменение доступа для пользователей iFolder </H3>
