--- a/src/admin/help/ru/webacc.html
+++ b/src/admin/help/ru/webacc.html
@@ -57,7 +57,7 @@
        --> 
   <h3 class="head3b">Запуск приложения веб-администрирования</h3>
   
-  <p>С помощью консоли веб-администрирования можно управлять серверами, параметрами политик, пользователями iFolder и папками iFolder в определенном домене iFolder 3.7. Можно предоставлять доступ к домену iFolder пользователям LDAP и управлять серверами iFolder, относящимися к домену iFolder. С помощью приложения веб-администрирования можно также включить принудительное использование шифрования. В консоли веб-администрирования появится возможность создания расширенных отчетов, содержащих информацию об общем состоянии сервера, отчеты об учетных записях iFolder и сведения об учетных записях пользователей. 
+  <p>С помощью консоли веб-администрирования можно управлять серверами, параметрами политик, пользователями и папками iFolder в конкретном домене iFolder 3.7 или более поздней версии. Можно предоставлять доступ к домену iFolder пользователям LDAP и управлять серверами iFolder в домене iFolder. С помощью приложения веб-администрирования можно также включить принудительное использование шифрования. В консоли веб-администрирования появится возможность создания расширенных отчетов, содержащих информацию об общем состоянии сервера, отчеты об учетных записях iFolder и сведения об учетных записях пользователей. 
   </p>
 	
   
