--- a/src/admin/help/sk/login.html
+++ b/src/admin/help/sk/login.html
@@ -1,4 +1,4 @@
-﻿<html>
+<html>
 
    <head>
      <meta http-equiv="content-type" content="text/html;charset=UTF-8">
@@ -58,7 +58,7 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
        --> 
   <h3 class="head3b">Prihl&aacute;senie do spr&aacute;vcu Web Admin</h3>
   
-  <P>Ak chcete spravovať priečinky iFolder a použ&iacute;vateľov, prihl&aacute;ste sa do spr&aacute;vcu Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 Web Admin. Meno a heslo použ&iacute;vateľa spr&aacute;vcu aplik&aacute;cie iFolder sa overuje oproti služb&aacute;m adres&aacute;ra LDAP. </P>
+  <P>Ak chcete spravovať priečinky iFolder a použ&iacute;vateľov, prihl&aacute;ste sa do spr&aacute;vcu Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> Web Admin, verzie 3.7 alebo novšej. Meno a heslo použ&iacute;vateľa spr&aacute;vcu aplik&aacute;cie iFolder sa overuje oproti služb&aacute;m adres&aacute;ra LDAP. </P>
   <P>M&ocirc;žete tiež určiť, ktor&yacute; z podporovan&yacute;ch jazykov chcete použ&iacute;vať. Obyčajne ide o rovnak&yacute; jazyk, ako použ&iacute;va podnikov&yacute; server aplik&aacute;cie iFolder a miestny poč&iacute;tač. Nezabudnite nakonfigurovať nastavenie Jazyk svojho prehľad&aacute;vača tak, aby podporoval požadovan&yacute; jazyk. </P>
 <OL>
   <LI>
