--- a/src/admin/help/sk/users.html
+++ b/src/admin/help/sk/users.html
@@ -54,7 +54,7 @@
             with a line beneath it.
        --> 
   <h3 class="head3b">Spr&aacute;va &uacute;čtu použ&iacute;vateľa</h3>
-  <p> Toto rozhranie použ&iacute;vajte na spr&aacute;vu použ&iacute;vateľov priečinka iFolder vo zvolenej dom&eacute;ne priečinka iFolder.   N&aacute;stroj vyhľad&aacute;vania pom&aacute;ha n&aacute;jsť umiestnenie &uacute;čtu použ&iacute;vateľa priečinka Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> verzie 3.7, ktor&yacute; chcete spravovať. </p>
+  <p> Toto rozhranie použ&iacute;vajte na spr&aacute;vu použ&iacute;vateľov priečinka iFolder vo zvolenej dom&eacute;ne priečinka iFolder.   N&aacute;stroj vyhľad&aacute;vania pom&aacute;ha n&aacute;jsť umiestnenie &uacute;čtu použ&iacute;vateľa priečinka Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 alebo novšej verzie, ktor&yacute; chcete spravovať. </p>
 	
   <P><B><FONT SIZE="-1">POZN&Aacute;MKA.</FONT></B> <FONT SIZE="-1">Term&iacute;n <i>použ&iacute;vatelia aplik&aacute;cie iFolder</i> sa vzťahuje na jednotliv&yacute;ch použ&iacute;vateľov i skupiny LDAP.</FONT></P>
 	<BLOCKQUOTE CLASS="blockquote"><P><BR>
