--- a/src/admin/help/sk/webacc.html
+++ b/src/admin/help/sk/webacc.html
@@ -57,7 +57,7 @@
        --> 
   <h3 class="head3b">Spustenie služby Web Admin</h3>
   
-  <p>Konzola Web Admin v&aacute;m umožn&iacute; spravovať servery, nastavenia politiky, použ&iacute;vateľov priečinka iFolder a priečinky ifolder v dom&eacute;ne iFolder 3.7. Použ&iacute;vateľom služby LDAP m&ocirc;žete povoliť dom&eacute;nu iFolder a spravovať servery iFolder, ktor&eacute; s&uacute; zapojen&eacute; do dom&eacute;ny iFolder.  So konzolou Web Admin m&ocirc;žete tiež posilniť šifrovanie použ&iacute;vateľov. Konzola Web Admin bude schopn&aacute; vyrobiť vylepšen&eacute; zostavy s celkov&yacute;m stavom servera, zostavy pre konto priečinka iFolder and inform&aacute;cie o konte použ&iacute;vateľa. 
+  <p>Konzola Web Admin v&aacute;m umožn&iacute; spravovať servery, nastavenia politiky, použ&iacute;vateľov priečinka iFolder a priečinky iFolder v dom&eacute;ne iFolder verzie 3.7 alebo novšej. Použ&iacute;vateľom služby LDAP m&ocirc;žete povoliť dom&eacute;nu iFolder a spravovať servery iFolder, ktor&eacute; s&uacute; zapojen&eacute; do dom&eacute;ny iFolder.  So konzolou Web Admin m&ocirc;žete tiež posilniť šifrovanie použ&iacute;vateľov. Konzola Web Admin bude schopn&aacute; vyrobiť vylepšen&eacute; zostavy s celkov&yacute;m stavom servera, zostavy pre konto priečinka iFolder and inform&aacute;cie o konte použ&iacute;vateľa. 
   </p>
 	
   
