--- a/src/admin/help/zh-CN/systeminfo.html
+++ b/src/admin/help/zh-CN/systeminfo.html
@@ -55,7 +55,7 @@ div.Section1
 <!-- This is the start of the Help Content Layer --> <div id="helpcontent"> <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> <h3 class="head3b">管理 iFolder 系统</h3>
-  <p> 使用此界面可管理所选服务器的 Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 服务。</p>
+  <p> 使用此界面可管理所选服务器的 Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 或更高版本服务。</p>
   <P>此帮助提供以下信息：</P>
   <blockquote> <P><A HREF="#sytemsettings" TARGET="_self">系统设置 </A> <BR><A HREF="#status" TARGET="_self">重新配置状态</a><BR><A HREF="#admin" TARGET="_self">&ldquo;管理员&rdquo;选项卡</a><BR> <A HREF="#policy" TARGET="_self">策略</a><BR></P></BLOCKQUOTE>
   
@@ -118,8 +118,8 @@ div.Section1
         <span style="font-size:11.0pt;font-family:Arial;">选择<i>管理员控制台</i>选项来使管理员明确管理组和组中成员的磁盘定额。当您选择此选项时，指派给用户的磁盘定额将受到限制，使其不超过组的累积磁盘使用率。默认情况下，该<i>管理控制台</i>选项处于选中状态。</span></p>
         <p class="Normal2">
         <span style="font-size:11.0pt;font-family:Arial;">选择<i>同步引擎</i>选项来启用同步引擎以便管理后端中组上的累积磁盘定额。同步引擎保证组中所有用户的磁盘定额不超过组的累积磁盘定额。</span></p>
-        <p class="Normal2">
-        &nbsp;</p>
+        <p class="Normal2">&nbsp;
+        </p>
         </TD></TR><TR><TD VALIGN="TOP">
         <span style="font-size: 11.0pt; font-family: Arial; ">分离组</span></TD><TD>
         <span style="font-size: 11.0pt; font-family: Arial; ">使您能够将组分离成独立实体，并确保组的成员无法访问的另一组成员共享的 iFolder。选中<i>创建分离组</i>复选框以便只能够在同一组的各成员之间进行 iFolder 共享。</span><p>
@@ -298,7 +298,7 @@ div.Section1
 <TR>
       <TD VALIGN="TOP"> 
         <h4><span style="FONT-SIZE: 9.5pt; FONT-FAMILY: Arial">iFolder 每用户策略</span></h4>
-        <h4> &nbsp;</h4>
+        <h4>&nbsp; </h4>
       </TD>
       <TD> 
         <p class="Normal2">
