--- a/src/admin/help/zh-CN/users.html
+++ b/src/admin/help/zh-CN/users.html
@@ -54,7 +54,7 @@
             with a line beneath it.
        --> 
   <h3 class="head3b">管理用户帐户</h3>
-  <p> 使用此界面在所选的 iFolder 域中管理 iFolder 用户。搜索工具可帮助您查找您要管理的 Novell iFolder <SUP><SMALL>&reg;</SMALL></SUP> 3.7 用户帐户。 </p>
+  <p> 使用此界面在所选的 iFolder 域中管理 iFolder 用户。搜索工具可帮助您查找您要管理的 Novell iFolder <SUP><SMALL>&reg;</SMALL></SUP> 3.7 或更高版本的用户帐户。 </p>
 	
   <P><B><FONT SIZE="-1">注意：</FONT></B><FONT SIZE="-1">术语 <i>iFolder 用户</i> 既指单个用户，也指 LDAP 组。</FONT></P>
 	<BLOCKQUOTE CLASS="blockquote"><P><BR>
