--- a/src/admin/help/zh-CN/webacc.html
+++ b/src/admin/help/zh-CN/webacc.html
@@ -57,7 +57,7 @@
        --> 
   <h3 class="head3b">启动万维网 Admin</h3>
   
-  <p>使用万维网 Admin 控制台可以在给定的 iFolder 3.7 域中管理服务器、策略设置、iFolder 用户和 iFolder。可以使用户以 LDAP 用户的身份加入到 iFolder 域以及管理加入到 iFolder 域的 iFolder 服务器。使用万维网 Admin 还可以强制用户加密。万维网 Admin 控制台具有生成增强型报告的功能，该报告中包括服务器的总体状态、iFolder 帐户报告和用户帐户信息。 
+  <p>使用万维网 Admin 控制台可以在给定的 iFolder 3.7 或更高版本的域中管理服务器、策略设置、iFolder 用户和 iFolder。可以使用户以 LDAP 用户的身份加入到 iFolder 域以及管理加入到 iFolder 域的 iFolder 服务器。使用万维网 Admin 还可以强制用户加密。万维网 Admin 控制台具有生成增强型报告的功能，该报告中包括服务器的总体状态、iFolder 帐户报告和用户帐户信息。 
   </p>
 	
   
