--- a/src/admin/help/zh-TW/ldapsettings.html
+++ b/src/admin/help/zh-TW/ldapsettings.html
@@ -53,7 +53,7 @@
 <!-- This is the start of the Help Content Layer --> <div id="helpcontent"> <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> <h3 class="head3b">管理 iFolder 系統的 LDAP 設定</h3>
-  <p> 請使用此介面來修改選定 iFolder 領域內的 Novell<SUP><SMALL>&reg;</SMALL></SUP> iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 伺服器的 LDAP 設定。 </p>
+  <p> 請使用此介面來修改選定 iFolder 網域內的 Novell<SUP><SMALL>&reg;</SMALL></SUP> iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 或更新版本之伺服器的 LDAP 設定。 </p>
   
   <H3><A NAME="modify"></A>修改 LDAP 設定</H3><P>修改下列任一欄位，然後按一下「<i>確定</i>」以套用您的變更：</P><TABLE WIDTH="93%" BORDER="1"><TR><TD CLASS="tablehead2"><P>參數</P></TD><TD CLASS="tablehead2"><P>描述</P></TD></TR>
 <TR><TD VALIGN="TOP">
