--- a/src/admin/help/zh-TW/login.html
+++ b/src/admin/help/zh-TW/login.html
@@ -1,4 +1,4 @@
-﻿<html>
+<html>
 
    <head>
      <meta http-equiv="content-type" content="text/html;charset=UTF-8">
@@ -58,7 +58,7 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
        --> 
   <h3 class="head3b">登入 Web 管理員</h3>
   
-  <P>登入「Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 Web 管理員」，以管理 iFolder 和使用者。「iFolder 管理員」的使用者名稱和密碼會根據 LDAP 目錄服務進行驗證。 </P>
+  <P>登入 Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 或更新版本的 Web 管理員，以管理 iFolder 和使用者。「iFolder 管理員」的使用者名稱和密碼會根據 LDAP 目錄服務進行驗證。 </P>
   <P>您還可以指定要使用的支援語言。通常，此語言便是 iFolder 企業伺服器和您本機電腦的語言代碼。請確定設定您瀏覽器的「語言」設定以支援所需語言。 </P>
 <OL>
   <LI>
