--- a/src/admin/help/zh-TW/systeminfo.html
+++ b/src/admin/help/zh-TW/systeminfo.html
@@ -55,7 +55,7 @@ div.Section1
 <!-- This is the start of the Help Content Layer --> <div id="helpcontent"> <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> <h3 class="head3b">管理 iFolder 系統</h3>
-  <p> 使用此介面管理選定伺服器的 Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 服務。</p>
+  <p> 使用此介面管理選定伺服器的 Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 或更新版本的服務。</p>
   <P>本說明討論下列資訊：</P>
   <blockquote> <P><A HREF="#sytemsettings" TARGET="_self">系統設定 </A> <BR><A HREF="#status" TARGET="_self">重新供應狀態</a><BR><A HREF="#admin" TARGET="_self">管理員索引標籤</a><BR> <A HREF="#policy" TARGET="_self">規則 </a><BR></P></BLOCKQUOTE>
   
@@ -118,8 +118,8 @@ div.Section1
         <span style="font-size:11.0pt;font-family:Arial;">選取<i>「管理員主控台」</i>選項可讓管理員明確地管理群組的磁碟配額與群組的成員。當您選取此選項時，會限制指定給使用者的磁碟配額，這樣使用者可使用的磁碟空間就不會超過群組的彙總磁碟使用空間。根據預設，會選取<i>「管理員主控台」</i>選項。</span></p>
         <p class="Normal2">
         <span style="font-size:11.0pt;font-family:Arial;">選取<i>「同步引擎」</i>選項可讓同步引擎在後端管理群組上的彙總磁碟配額。同步引擎可確保群組中所有使用者的磁碟配額不會超過群組的彙總磁碟配額。</span></p>
-        <p class="Normal2">
-        &nbsp;</p>
+        <p class="Normal2">&nbsp;
+        </p>
         </TD></TR><TR><TD VALIGN="TOP">
         <span style="font-size: 11.0pt; font-family: Arial; "> 隔離的群組</span></TD><TD>
         <span style="font-size: 11.0pt; font-family: Arial; "> 讓您將群組隔離為獨立的實體，並確保屬於一個群組之成員的共享 iFolder 不會被另一個群組的成員存取。選取<i>「建立隔離的群組」</i>核取方塊可限制只有相同群組的成員才能共享 iFolder。</span><p>
@@ -298,7 +298,7 @@ div.Section1
 <TR>
       <TD VALIGN="TOP"> 
         <h4><span style="FONT-SIZE: 9.5pt; FONT-FAMILY: Arial"> 每位使用者的 iFolder 規則</span></h4>
-        <h4> &nbsp;</h4>
+        <h4>&nbsp; </h4>
       </TD>
       <TD> 
         <p class="Normal2">
