--- a/src/admin/help/zh-TW/users.html
+++ b/src/admin/help/zh-TW/users.html
@@ -54,7 +54,7 @@
             with a line beneath it.
        --> 
   <h3 class="head3b">管理使用者帳戶</h3>
-  <p> 使用此介面管理選定 iFolder 領域內的 iFolder 使用者。搜尋工具可協助您找出您要管理的 Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 使用者帳號。 </p>
+  <p> 使用此介面管理選定 iFolder 領域內的 iFolder 使用者。搜尋工具可協助您找出您要管理的 Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 或更新版本的使用者帳號。 </p>
 	
   <P><B><FONT SIZE="-1">注意：</FONT></B><FONT SIZE="-1"><i>iFolder 使用者</i>一詞代表的包括個別使用者和 LdapGroup。</FONT></P>
 	<BLOCKQUOTE CLASS="blockquote"><P><BR>
