--- a/src/admin/help/zh-TW/webacc.html
+++ b/src/admin/help/zh-TW/webacc.html
@@ -57,7 +57,7 @@
        --> 
   <h3 class="head3b">啟動 Web 管理員</h3>
   
-  <p>「Web 管理員」主控台可讓您管理伺服器、規則設定、iFolder 使用者，以及指定 iFolder 3.7 領域內的 iFolder。您可以讓使用者從 LDAP 使用者進入 iFolder 領域，並管理參與 iFolder 領域的使用者。您也可以使用「Web 管理員」對使用者強制執行加密。「Web 管理員」主控台將會提供產生增強型報表的功能，其中包括整體的伺服器狀態、iFolder 帳戶報告和使用者帳戶資訊。 
+  <p>「Web 管理員」主控台可讓您管理伺服器、規則設定、iFolder 使用者，以及指定 iFolder 3.7 或更新版本之網域內的 iFolder。您可以讓使用者從 LDAP 使用者進入 iFolder 網域，並管理參與 iFolder 網域的使用者。您也可以使用「Web 管理員」對使用者強制執行加密。「Web 管理員」主控台將會提供產生增強型報表的功能，其中包括整體的伺服器狀態、iFolder 帳戶報告和使用者帳戶資訊。 
   </p>
 	
   
