--- a/src/webaccess/help/ja/login.html
+++ b/src/webaccess/help/ja/login.html
@@ -47,7 +47,7 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
 <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> <h3 class="head3b">Web Accessへのログイン</h3>
-  <p> iFolder 3.7アカウントでNovell iFolder<sup><small>&reg;</small></sup> 3.7 Web Accessにログインすると、自分のiFolderや自分がメンバーとなっているLDAPGroupのiFolderに入っているフォルダやファイルにアクセスできます。この場合、自分が参加しているiFolderにアクセスすることになりますが、ローカルコンピュータにiFolderがセットアップされているわけではありません(Web AccessではNovell iFolder 2.<I>x</I>アカウントを使用してファイルにアクセスすることはできません)。ユーザ名とパスワードは、LDAPディレクトリサービスを介して認証されます。 
+  <p> iFolder 3.7以降のアカウントでNovell iFolder<sup><small>&reg;</small></sup> 3.7以降のWeb Accessにログインすると、自分のiFolderや自分がメンバーとなっているLDAPGroupのiFolderに入っているフォルダやファイルにアクセスできます。この場合、自分が参加しているiFolderにアクセスすることになりますが、ローカルコンピュータにiFolderがセットアップされているわけではありません(Web AccessではNovell iFolder 2.<I>x</I>アカウントを使用してファイルにアクセスすることはできません)。ユーザ名とパスワードは、LDAPディレクトリサービスを介して認証されます。 
   </p>
   <p>また、使用するサポート言語も指定できます。この言語は通常、iFolderエンタープライズサーバおよびローカルコンピュータの言語コードと同じ言語です。目的の言語をサポートするように、ブラウザの言語設定を設定してください。 </p>
   <ol><li><p> アクセスするiFolderアカウントのユーザ名とパスワードを指定します。 <br><br>
