--- a/src/webaccess/help/ru/login.html
+++ b/src/webaccess/help/ru/login.html
@@ -47,7 +47,7 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
 <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> <h3 class="head3b">Вход в веб-клиент</h3>
-  <p> Войдите в веб-клиент Novell iFolder<sup><small>&reg;</small></sup> 3.7 с помощью учетной записи iFolder 3.7 для получения доступа к папкам и файлам, содержащимся в папках iFolder, доступных Вам или группе LDAPGroup, членом которой Вы являетесь. Кроме того, можно использовать папки iFolder, к которым Вы имеете доступ, но которые не настроены на локальном компьютере. (Получение доступа к файлам с помощью учетной записи веб-клиента Novell iFolder 2.<I>x</I> невозможно.) Проверка имени пользователя и пароля выполняется в базе данных сервиса Каталога LDAP. 
+  <p> Войдите в веб-клиент Novell iFolder<sup><small>&reg;</small></sup> 3.7 или более поздней версии с помощью учетной записи iFolder 3.7 или более поздней версии, чтобы получить доступ к папкам и файлам в папках iFolder, доступных Вам или группе LDAPGroup, членом которой Вы являетесь. Кроме того, можно использовать папки iFolder, к которым Вы имеете доступ, но которые не настроены на локальном компьютере. (Получение доступа к файлам с помощью учетной записи веб-клиента Novell iFolder 2.<I>x</I> невозможно.) Проверка имени пользователя и пароля выполняется в базе данных сервиса Каталога LDAP. 
   </p>
   <p>Кроме того, можно указать, какой из поддерживаемых языков следует использовать. Этот язык обычно соответствует коду языка сервера iFolder и локального компьютера. Убедитесь в том, что язык навигатора настроен для поддержки требуемого языка. </p>
   <ol><li><p> Укажите имя пользователя и пароль учетной записи iFolder, к которой необходимо получить доступ. <br><br>
