--- a/src/webaccess/help/zh-CN/login.html
+++ b/src/webaccess/help/zh-CN/login.html
@@ -47,7 +47,7 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
 <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> <h3 class="head3b">登录到万维网访问</h3>
-  <p> 使用 iFolder 3.7 帐户登录到 Novell iFolder<sup><small>&reg;</small></sup> 3.7 万维网访问以获取对任何您或您所属的 LDAP 组可用的 iFolder 中的文件夹和文件的访问权限。这包括您加入但未在本地计算机上设置的 iFolder。（您不能使用万维网访问功能访问 Novell iFolder 2.<I>x</I> 帐户中的文件。）系统会根据 LDAP 目录服务对您的用户名和口令进行鉴定。 
+  <p> 使用 iFolder 3.7 或更高版本帐户登录到 Novell iFolder<sup><small>&reg;</small></sup> 3.7 或更高版本万维网访问以获取对任何您或您所属的 LDAP 组可用的 iFolder 中的文件夹和文件的访问权限。这包括您加入但未在本地计算机上设置的 iFolder。（您不能使用万维网访问功能访问 Novell iFolder 2.<I>x</I> 帐户中的文件。）系统会根据 LDAP 目录服务对您的用户名和口令进行鉴定。 
   </p>
   <p>您还可以指定要使用哪种受支持的语言。该语言通常与 iFolder Enterprise Server 和本地计算机的语言代码相同。请务必对浏览器的语言设置进行配置，使其支持所需的语言。 </p>
   <ol><li><p> 指定要访问的 iFolder 帐户的用户名和口令。 <br><br>
