--- a/src/webaccess/help/zh-TW/login.html
+++ b/src/webaccess/help/zh-TW/login.html
@@ -47,7 +47,7 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
 <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> <h3 class="head3b">登入 Web 存取</h3>
-  <p> 登入 Novell iFolder<sup><small>&reg;</small></sup> 3.7 Web Access 以存取 iFolder 3.7 帳戶中，您或您所屬的 LDAPGroup 適用的 iFolder 資料夾或檔案。這包括您參與但尚未在本機電腦上設定的 iFolder。(您無法使用 Web 存取來存取您 Novell iFolder 2.<I>x</I> 中的檔案。)您的使用者名稱和密碼會根據 LDAP 目錄服務進行驗證。 
+  <p> 登入 Novell iFolder<sup><small>&reg;</small></sup> 3.7 或更新版本的 Web Access 以存取 iFolder 3.7 或更新版本帳戶中，您或您所屬的 LDAPGroup 適用的 iFolder 資料夾或檔案。這包括您參與但尚未在本機電腦上設定的 iFolder。(您無法使用 Web 存取來存取您 Novell iFolder 2.<I>x</I> 中的檔案。)您的使用者名稱和密碼會根據 LDAP 目錄服務進行驗證。 
   </p>
   <p>您還可以指定要使用的支援語言。通常，此語言便是 iFolder 企業伺服器和您本機電腦的語言代碼。請確定設定您瀏覽器的「語言」設定以支援所需語言。 </p>
   <ol><li><p> 指定要存取之 iFolder 帳戶的使用者名稱和密碼。 <br><br>
