--- a/src/admin/help/es/ldapsettings.html
+++ b/src/admin/help/es/ldapsettings.html
@@ -53,7 +53,7 @@
 <!-- This is the start of the Help Content Layer --> <div id="helpcontent"> <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> <h3 class="head3b">Gesti&oacute;n de los valores de LDAP para el sistema iFolder</h3>
-  <p> Utilice esta interfaz para modificar los valores de LDAP del servidor Novell<SUP><SMALL>&reg;</SMALL></SUP> iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 de este dominio iFolder. </p>
+  <p> Utilice esta interfaz para modificar los valores de LDAP del servidor Novell<SUP><SMALL>&reg;</SMALL></SUP> iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 o posterior de este dominio iFolder. </p>
   
   <H3><A NAME="modify"></A>Modificaci&oacute;n de los valores de LDAP</H3><P>Modifique cualquiera de los campos siguientes y, a continuaci&oacute;n, haga clic en <i>Aceptar</i> para aplicar los cambios:</P><TABLE WIDTH="93%" BORDER="1"><TR><TD CLASS="tablehead2"><P>Par&aacute;metro</P></TD><TD CLASS="tablehead2"><P> Descripci&oacute;n</P></TD></TR>
 <TR><TD VALIGN="TOP">
