--- a/src/admin/help/es/systeminfo.html
+++ b/src/admin/help/es/systeminfo.html
@@ -55,7 +55,7 @@ div.Section1
 <!-- This is the start of the Help Content Layer --> <div id="helpcontent"> <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> <h3 class="head3b">Gesti&oacute;n del sistema de iFolder</h3>
-  <p> Esta interfaz permite gestionar los servicios de Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 para el servidor seleccionado.</p>
+  <p> Esta interfaz permite gestionar los servicios de Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 o posterior para el servidor seleccionado.</p>
   <P>En esta ayuda es trata la siguiente informaci&oacute;n:</P>
   <blockquote> <P><A HREF="#sytemsettings" TARGET="_self">Ajustes del sistema </A> <BR><A HREF="#status" TARGET="_self">Estado de la nueva provisi&oacute;n</a><BR><A HREF="#admin" TARGET="_self">Pesta&ntilde;a Administradores</a><BR> <A HREF="#policy" TARGET="_self">Directivas </a><BR></P></BLOCKQUOTE>
   
@@ -118,8 +118,8 @@ div.Section1
         <span style="font-size:11.0pt;font-family:Arial;">Seleccione la opci&oacute;n <i>Consola de administrador</i> para que los administradores puedan gestionar expl&iacute;citamente la cuota de disco para grupos y miembros de un grupo. Cuando seleccione esta opci&oacute;n, se limitar&aacute; la cuota de disco asignada a los usuarios para que no supere el uso de disco en conjunto del grupo. La opci&oacute;n <i>Consola de administrador</i> est&aacute; seleccionada por defecto.</span></p>
         <p class="Normal2">
         <span style="font-size:11.0pt;font-family:Arial;">Seleccione la opci&oacute;n <i>Motor de sincronizaci&oacute;n</i> para permitir al motor de sincronizaci&oacute;n gestionar la cuota de disco en conjunto en grupos en el sistema secundario. El motor de sincronizaci&oacute;n garantiza que la cuota de disco para todos los usuarios de un grupo no superar&aacute; la cuota de disco en conjunto del grupo.</span></p>
-        <p class="Normal2">
-        &nbsp;</p>
+        <p class="Normal2">&nbsp;
+        </p>
         </TD></TR><TR><TD VALIGN="TOP">
         <span style="font-size: 11.0pt; font-family: Arial; ">Grupos segregados</span></TD><TD>
         <span style="font-size: 11.0pt; font-family: Arial; "> Permite segregar grupos en entidades independientes y garantizar que los miembros de otro grupo no pueden acceder a los miembros de un grupo para compartir carpetas iFolder. Seleccione el recuadro de verificaci&oacute;n <i>Crear grupos segregados</i> para habilitar el uso compartido de carpetas iFolder s&oacute;lo entre los miembros del mismo grupo.</span><p>
@@ -298,7 +298,7 @@ div.Section1
 <TR>
       <TD VALIGN="TOP"> 
         <h4><span style="FONT-SIZE: 9.5pt; FONT-FAMILY: Arial">Directiva Carpeta iFolder por usuario</span></h4>
-        <h4> &nbsp;</h4>
+        <h4>&nbsp; </h4>
       </TD>
       <TD> 
         <p class="Normal2">
