--- a/src/admin/help/fr/systeminfo.html
+++ b/src/admin/help/fr/systeminfo.html
@@ -55,7 +55,7 @@ div.Section1
 <!-- This is the start of the Help Content Layer --> <div id="helpcontent"> <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> <h3 class="head3b">Gestion du syst&egrave;me iFolder</h3>
-  <p> Cette interface permet de g&eacute;rer les services Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 pour le serveur s&eacute;lectionn&eacute;.</p>
+  <p> Cette interface permet de g&eacute;rer les services Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 ou version ult&eacute;rieure pour le serveur s&eacute;lectionn&eacute;.</p>
   <P>Cette aide aborde les sujets suivants&nbsp;:</P>
   <blockquote> <P><A HREF="#sytemsettings" TARGET="_self">Param&egrave;tres du syst&egrave;me </A> <BR><A HREF="#status" TARGET="_self">Statut red&eacute;ploiement</a><BR><A HREF="#admin" TARGET="_self">Onglet Administrateurs</a><BR> <A HREF="#policy" TARGET="_self">Strat&eacute;gies </a><BR></P></BLOCKQUOTE>
   
@@ -118,8 +118,8 @@ div.Section1
         <span style="font-size:11.0pt;font-family:Arial;">S&eacute;lectionnez l'option <i>Console de l'administrateur</i> pour permettre aux administrateurs de g&eacute;rer de mani&egrave;re explicite le quota de disque pour les groupes et les membres d'un groupe. Lorsque vous s&eacute;lectionnez cette option, le quota de disque assign&eacute; aux utilisateurs est limit&eacute; afin de ne pas d&eacute;passer l'utilisation totale du disque par le groupe. Par d&eacute;faut, l'option <i>Console de l'administrateur</i> est s&eacute;lectionn&eacute;e.</span></p>
         <p class="Normal2">
         <span style="font-size:11.0pt;font-family:Arial;">S&eacute;lectionnez l'option <i>Moteur de synchronisation</i> pour permettre au moteur de synchronisation de g&eacute;rer le quota de disque total pour les groupes sur l'interface dorsale. Le moteur de synchronisation veille &agrave; ce que le quota de disque pour tous les utilisateurs d'un groupe ne d&eacute;passe pas le quota de disque total du groupe.</span></p>
-        <p class="Normal2">
-        &nbsp;</p>
+        <p class="Normal2">&nbsp;
+        </p>
         </TD></TR><TR><TD VALIGN="TOP">
         <span style="font-size: 11.0pt; font-family: Arial; "> Groupes distincts</span></TD><TD>
         <span style="font-size: 11.0pt; font-family: Arial; "> Vous permet de s&eacute;parer les groupes en entit&eacute;s ind&eacute;pendantes et de veiller &agrave; ce que les membres d'un groupe ne soient pas accessibles aux membres d'un autre groupe pour le partage de dossiers iFolder. Cochez la case <i>Cr&eacute;er des groupes distincts</i> pour n'activer le partage de dossiers iFolder que parmi les membres du m&ecirc;me groupe.</span><p>
@@ -298,7 +298,7 @@ div.Section1
 <TR>
       <TD VALIGN="TOP"> 
         <h4><span style="FONT-SIZE: 9.5pt; FONT-FAMILY: Arial">Strat&eacute;gie de dossiers iFolder par utilisateur</span></h4>
-        <h4> &nbsp;</h4>
+        <h4>&nbsp; </h4>
       </TD>
       <TD> 
         <p class="Normal2">
