--- a/src/admin/help/pl/systeminfo.html
+++ b/src/admin/help/pl/systeminfo.html
@@ -55,7 +55,7 @@ div.Section1
 <!-- This is the start of the Help Content Layer --> <div id="helpcontent"> <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> <h3 class="head3b">Zarządzanie systemem iFolder </h3>
-  <p> Ten interfejs służy do zarządzania usługami Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 na wybranym serwerze.</p>
+  <p> Ten interfejs służy do zarządzania usługami programu Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 lub nowszego na wybranym serwerze.</p>
   <P>W tym pliku pomocy opisano następujące zagadnienia:</P>
   <blockquote> <P><A HREF="#sytemsettings" TARGET="_self">Ustawienia systemu</A> <BR><A HREF="#status" TARGET="_self">Postęp zmiany serwera domowego</a><BR><A HREF="#admin" TARGET="_self">Karta Administratorzy</a><BR> <A HREF="#policy" TARGET="_self">Założenia </a><BR></P></BLOCKQUOTE>
   
@@ -118,8 +118,8 @@ div.Section1
         <span style="font-size:11.0pt;font-family:Arial;">Wybranie opcji <i>Konsola administratora</i> umożliwia administratorom jawne zarządzanie przydziałem dysku dla grup i członk&oacute;w grup. Po wybraniu tej opcji przydział dysku przypisany do użytkownik&oacute;w zostaje ograniczony, tak aby nie przekroczył łącznego użycia dysku dla danej grupy. Opcja <i>Konsola administratora</i> jest domyślnie zaznaczona.</span></p>
         <p class="Normal2">
         <span style="font-size:11.0pt;font-family:Arial;">Wybranie opcji <i>Mechanizm synchronizacji</i> powoduje zarządzanie łącznym przydziałem dysku dla grup przez mechanizm synchronizacji na zapleczu. Mechanizm synchronizacji gwarantuje, że przydział dysku wszystkich użytkownik&oacute;w w grupie nie przekroczy łącznego przydziału dysku tej grupy.</span></p>
-        <p class="Normal2">
-        &nbsp;</p>
+        <p class="Normal2">&nbsp;
+        </p>
         </TD></TR><TR><TD VALIGN="TOP">
         <span style="font-size: 11.0pt; font-family: Arial; ">Grupy oddzielone</span></TD><TD>
         <span style="font-size: 11.0pt; font-family: Arial; "> Umożliwia rozdzielenie grup na odrębne jednostki, w wyniku czego członkowie r&oacute;żnych grup nie mogą wsp&oacute;łużytkować folder&oacute;w iFolder. Zaznaczenie pola wyboru <i>Utw&oacute;rz grupy oddzielone</i> powoduje, że  foldery iFolder mogą być wsp&oacute;łużytkowane tylko przez członk&oacute;w tej samej grupy.</span><p>
@@ -298,7 +298,7 @@ div.Section1
 <TR>
       <TD VALIGN="TOP"> 
         <h4><span style="FONT-SIZE: 9.5pt; FONT-FAMILY: Arial">Założenie iFoldery dla poszczeg&oacute;lnych użytkownik&oacute;w</span></h4>
-        <h4> &nbsp;</h4>
+        <h4>&nbsp; </h4>
       </TD>
       <TD> 
         <p class="Normal2">
