--- a/src/admin/help/sk/ldapsettings.html
+++ b/src/admin/help/sk/ldapsettings.html
@@ -53,7 +53,7 @@
 <!-- This is the start of the Help Content Layer --> <div id="helpcontent"> <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> <h3 class="head3b">Spr&aacute;va nastaven&iacute; LDAP pre syst&eacute;m služby iFolder</h3>
-  <p> Pomocou tohto rozhrania m&ocirc;žete zmeniť nastavenia LDAP pre vybrat&yacute; server aplik&aacute;cie Novell<SUP><SMALL>&reg;</SMALL></SUP> iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 &reg; 3.7 v tejto dom&eacute;ne aplik&aacute;cie iFolder. </p>
+  <p> Pomocou tohto rozhrania m&ocirc;žete zmeniť nastavenia LDAP pre vybrat&yacute; server aplik&aacute;cie Novell<SUP><SMALL>&reg;</SMALL></SUP> iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 alebo novšej verzie v tejto dom&eacute;ne aplik&aacute;cie iFolder. </p>
   
   <H3><A NAME="modify"></A>Zmena nastaven&iacute; LDAP</H3><P>Zmeňte ľubovoľn&eacute; z nasleduj&uacute;cich pol&iacute; a kliknut&iacute;m na tlačidlo <i></i>OK zmeny použite:</P><TABLE WIDTH="93%" BORDER="1"><TR><TD CLASS="tablehead2"><P>Parameter</P></TD><TD CLASS="tablehead2"><P>Popis</P></TD></TR>
 <TR><TD VALIGN="TOP">
