--- a/src/admin/help/sk/systeminfo.html
+++ b/src/admin/help/sk/systeminfo.html
@@ -55,7 +55,7 @@ div.Section1
 <!-- This is the start of the Help Content Layer --> <div id="helpcontent"> <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> <h3 class="head3b">Spr&aacute;va syst&eacute;mu služieb iFolder</h3>
-  <p> Pomocou tohto rozhrania m&ocirc;žete spravovať služby aplik&aacute;cie Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 pre vybrat&yacute; server.</p>
+  <p> Pomocou tohto rozhrania m&ocirc;žete spravovať služby aplik&aacute;cie Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 3.7 alebo novšej verzie pre vybrat&yacute; server.</p>
   <P>Tento pomocn&iacute;k poskytuje nasleduj&uacute;ce inform&aacute;cie:</P>
   <blockquote> <P><A HREF="#sytemsettings" TARGET="_self">Nastavenia syst&eacute;mu </A> <BR><A HREF="#status" TARGET="_self">Stav op&auml;tovn&eacute;ho poskytnutia</a><BR><A HREF="#admin" TARGET="_self">Karta Spr&aacute;vcovia</a><BR> <A HREF="#policy" TARGET="_self">Z&aacute;sady</a><BR></P></BLOCKQUOTE>
   
@@ -118,8 +118,8 @@ div.Section1
         <span style="font-size:11.0pt;font-family:Arial;">V&yacute;berom možnosti <i>Konzola spr&aacute;vcu</i> umožn&iacute;te spr&aacute;vcom explicitne spravovať kv&oacute;tu disku pre skupiny a členov skup&iacute;n. Pri v&yacute;bere tejto možnosti je kv&oacute;ta disku, ktor&aacute; je priraden&aacute; použ&iacute;vateľom, obmedzen&aacute; tak, aby neprekračovala agregovan&eacute; využitie priestoru na disku pre skupinu. <i>Konzola spr&aacute;vcu</i> je predvolenou možnosťou.</span></p>
         <p class="Normal2">
         <span style="font-size:11.0pt;font-family:Arial;">V&yacute;berom možnosti <i>N&aacute;stroj na synchroniz&aacute;ciu</i> umožn&iacute;te n&aacute;stroju na synchroniz&aacute;ciu spravovať agregovan&uacute; kv&oacute;tu disku pre skupiny v serverovej časti. N&aacute;stroj na synchroniz&aacute;ciu zabezpeč&iacute;, že kv&oacute;ta disku pre všetk&yacute;ch použ&iacute;vateľov v skupine neprekroč&iacute; agregovan&uacute; kv&oacute;tu disku pre skupinu.</span></p>
-        <p class="Normal2">
-        &nbsp;</p>
+        <p class="Normal2">&nbsp;
+        </p>
         </TD></TR><TR><TD VALIGN="TOP">
         <span style="font-size: 11.0pt; font-family: Arial; "> Segregovan&eacute; skupiny</span></TD><TD>
         <span style="font-size: 11.0pt; font-family: Arial; "> Umožňuje rozdeliť skupiny na nez&aacute;visl&eacute; entity, č&iacute;m sa zabezpeč&iacute;, že členovia jednej skupiny nebud&uacute; pr&iacute;stupn&iacute; pre členov inej skupiny na zdieľanie priečinkov iFolder. Začiarknut&iacute;m pol&iacute;čka <i>Vytvoriť segregovan&eacute; skupiny</i> povol&iacute;te zdieľanie priečinkov iFolder len medzi členmi tej istej skupiny.</span><p>
@@ -298,7 +298,7 @@ div.Section1
 <TR>
       <TD VALIGN="TOP"> 
         <h4><span style="FONT-SIZE: 9.5pt; FONT-FAMILY: Arial">Politika priečinkov iFolder podľa použ&iacute;vateľov</span></h4>
-        <h4> &nbsp;</h4>
+        <h4>&nbsp; </h4>
       </TD>
       <TD> 
         <p class="Normal2">
